--- a/_posts/2001-08-15-虢中上学记.md
+++ b/_posts/2001-08-15-虢中上学记.md
@@ -85,3 +85,21 @@ date: 2001-08-15 10:01:01
 > 补课记
 
 
+#### 做实验
+
+> 自初中开始我就对化学有了浓厚的兴趣。那时我的床是砖块支起来的，下面空着，可以放好多东西，自然就成了我藏宝和放实验用品的。做实验的场地主要在小花坛，以及平房的楼顶。实验的瓶子基本上都是拣来的注射剂瓶子还有饮料瓶。
+
+> 到高中的时候已经大大小小攒了二十来瓶化学品了。其中许多是我自制的，比如氢氧化钠，还有用硫制作的亚硫酸（其实很容易氧化成硫酸）。当然也有很多失败的。比如我想用秸秆面粉等发酵醋酸和酒精，但是均告以失败。
+
+> 高中的时候知识宽了，对化学更有兴趣了，有次想着试下制作盐酸，原料是浓硫酸和食盐。浓硫酸不好来，最后发现城里有个化学品店可以买到，一个周末回家的时候用积攒的零花钱，那时候花了25块钱买了一大瓶浓硫酸。这种危险品自然不能明目张胆的带回去，我就装到书包里，一路上抱着，拿回了家。
+
+> 现在想下都有很后怕，这多年是多么危险的操作阿，那家化工品点居然没有问就把一大瓶浓硫酸卖给一个中学生。
+
+> 回到家我就在平房的楼顶一个人准备起来，用啤酒瓶制作了一套设备，先加入食盐，然后倒入浓硫酸，赶紧盖上该子，把管子连到另一个瓶子，准备静等结果。后果可向而知，那个盖子顶不住压力，直接爆开了，浓硫酸给我衣服上喷溅了不少，当然脸上脖子上也是，脸上脖子上火辣辣的，还好有眼镜，不然估计得失明。
+
+> 爆炸之后赶紧往下跑，用清水洗臉，可想而知，还是变成了麻子脸。事后我也不敢给家里人说，在学校也之说是什么过敏了长痘痘了，父亲给我赶紧托人买了瓶药。
+
+> 这件事之后我对化学有些畏惧，虽然后来也没有留下伤疤，但是我高考志愿的时候也没怎么考虑化学专业。
+
+
+
