--- a/_posts/2022-12-28-读《资治通鉴》札记（十一）.md
+++ b/_posts/2022-12-28-读《资治通鉴》札记（十一）.md
@@ -1,19 +1,17 @@
 ---
 layout: post
-title: 读《资治通鉴》札记（十一）高祖立业，惠帝守之，诸吕乱汉，功臣保之
-description: 高祖立业，惠帝守之，诸吕乱汉，功臣保之
+title: 读《资治通鉴》札记（十一）高祖立业，惠帝守之，诸吕乱汉，功臣保之，文景之治
+description: 高祖立业，惠帝守之，诸吕乱汉，功臣保之，文景之治
 date: 2022-12-28 15:43:01
 ---
 
 > 接上篇，读《资治通鉴》札记（十）秦失其鹿 楚汉争之 高祖创业 天下归汉。
-
 
 ### 孝惠皇帝元年丁未（前194）
 
 <hr/>
 
 > 冬，十二月，帝晨出射。赵王少，不能蚤起；太后使人持鸩饮之。犁明，帝还，赵王已死。太后遂断戚夫人手足，去眼，煇耳，饮喑药，使居厕中，命日“人彘”。居数日，乃召帝观人彘。帝见，问知其戚夫人，乃大哭，因病，岁馀不能起。使人请太后曰：“此非人所为。臣为太后子，终不能治天下。”帝以此日饮为淫乐，不听政。
-
 
 ### 孝惠皇帝元年（前193）
 
@@ -25,7 +23,6 @@ date: 2022-12-28 15:43:01
 
 > 酂侯萧何病，上亲临视问曰：“君即百岁后，谁可代君者？”对曰：“知臣莫如主。”帝曰：“曹参何如？”何顿首曰：“帝得之矣，臣死不恨！”秋，七月，辛未，何薨。癸巳，以曹参为相国。参代何为相，举事无所变更，一遵何约束，日夜饮醇酒。帝怪相国不治事，至朝时，帝让参曰：“乃者我使谏君也。”参免冠谢曰：“陛下自察圣武孰与高帝？”上曰：“朕乃安敢望先帝！”又曰：“陛下观臣能孰与萧何贤？”上曰：“君似不及也。”参曰：“陛下言之是也。高帝与萧何定天下，法令既明。今陛下垂拱，参等守职，遵而勿失，不亦可乎？”帝曰：“善！”参为相国，出入三年，百姓歌之曰：“萧何为法，较若画一；曹参代之，守而勿失。载其清净，民以宁壹。”
 
-　
 ### 孝惠皇帝三年（前192）
 
 <hr/>
@@ -48,9 +45,7 @@ date: 2022-12-28 15:43:01
 
 <hr/>
 
-> 秋，八月，戊寅，帝崩于未央宫。九月，辛丑，葬安陵。
-
-> 初，吕太后命张皇后取他人子养之，而杀其母，以为太子。既葬，太子即皇帝位，年幼；太后临朝称制。
+> 秋，八月，戊寅，帝崩于未央宫。九月，辛丑，葬安陵。初，吕太后命张皇后取他人子养之，而杀其母，以为太子。既葬，太子即皇帝位，年幼；太后临朝称制。
 
 > 惠帝知才不如高祖，而不乱改法度，可谓明矣，为二世皇帝之鉴！
 
@@ -58,20 +53,13 @@ date: 2022-12-28 15:43:01
 
 <hr/>
 
+#### 吕太后封诸侯吕王
 
-> 冬，太后议欲立诸吕为王，问右丞相陵。陵曰：“高帝刑白马盟曰：‘非刘氏而王，天下共击之。’今王吕氏，非约也。”太后不说，问左丞相平、太尉勃，对曰：“高帝定天下，王子弟；今太后称制，王诸吕，无所不可。”太后喜，罢朝。王陵让陈平、绛侯曰；“始与高帝疌血盟，诸君不在邪？今高帝崩，太后女主，欲王吕氏；诸君纵欲阿意背约，何面目见高帝于地下乎？”陈平、降侯曰：“于今，面折廷争，臣不如君；全社稷，定刘氏之后，君亦不如臣。”陵无以应之。十一月，甲子，太后以王陵为帝太傅，实夺之相权。陵遂病免归。乃以左丞相平为右丞相，以辟阳侯审食其为左丞相，不治事，令监宫中，如郎中令。食其故得幸于太后，公卿皆因而决事。太后怨赵尧为赵隐王谋，乃抵尧罪。上党守任敖尝为沛狱吏，有德于太后，乃以为御史大夫。太后又追尊其父临泗侯吕公为宣王，兄周吕令武侯泽为悼武王，欲以王诸吕为渐。
-
-> 春，正月，除三族罪、妖言令。夏，四月，鲁元公主薨。封公主子张偃为鲁王，谥公主曰鲁元太后。
-
-> 辛卯，封所名孝惠子山为襄城侯，朝为轵侯，武为壶关侯。
-
-> 太后欲王吕氏，乃先立所名孝惠子强为淮阳王，不疑为恒山王；使大谒者张释风大臣。大臣乃请立悼武王长子郦侯台为吕王，割齐之济南郡为吕国。
-
+> 冬，太后议欲立诸吕为王，问右丞相陵。陵曰：“高帝刑白马盟曰：‘非刘氏而王，天下共击之。’今王吕氏，非约也。”太后不说，问左丞相平、太尉勃，对曰：“高帝定天下，王子弟；今太后称制，王诸吕，无所不可。”太后喜，罢朝。王陵让陈平、绛侯曰；“始与高帝盟，诸君纵欲阿意背约，何面目见高帝于地下乎？”陈平、降侯曰：“面折廷争，臣不如君；全社稷，定刘氏之后，君亦不如臣。”。十一月，甲子，太后以王陵为帝太傅，陵遂病免归。乃以左丞相平为右丞相。太后又追尊其父临泗侯吕公为宣王，兄周吕令武侯泽为悼武王，欲以王诸吕为渐。春，正月，除三族罪、妖言令。夏，四月，鲁元公主薨。封公主子张偃为鲁王，谥公主曰鲁元太后。太后欲王吕氏，乃先立所名孝惠子强为淮阳王，不疑为恒山王；使大谒者张释风大臣。大臣乃请立悼武王长子郦侯台为吕王，割齐之济南郡为吕国。
 
 ### 高皇后二年乙卯（前186）
 
 <hr/>
-
 
 ### 高皇后三年丙辰（前185）
 
@@ -81,9 +69,9 @@ date: 2022-12-28 15:43:01
 
 <hr/>
 
-> 少帝浸长，自知非皇后子，乃出言曰：“后安能杀吾母而名我！我壮，即为变！”太后闻之，幽之永巷中，言帝病，遂废帝，幽杀之。
+#### 吕太后废杀少帝
 
-> 五月，丙辰，立恒山王义为帝，更名曰弘，不称元年，以太后制天下事故也。
+> 少帝浸长，自知非皇后子，乃出言曰：“后安能杀吾母而名我！我壮，即为变！”太后闻之，幽之永巷中，言帝病，遂废帝，幽杀之。 五月，丙辰，立恒山王义为帝，更名曰弘，不称元年，以太后制天下事故也。
 
 > 有司请禁南越关市、铁器。南越王佗曰：“高帝立我，通使物。今高后听谗臣，别异蛮夷，隔绝器物，此必长沙王计，欲倚中国击灭南越而并王之，自为功也。”
 
@@ -110,23 +98,22 @@ date: 2022-12-28 15:43:01
 
 <hr/>
 
-#### 吕欲之乱
+#### 吕氏之乱
 
-> 秋，七月，太后病甚，乃令赵王禄为上将军，吕王产居南军，诫产、禄曰：“吕氏之王，大臣弗平。我即崩，帝年少，大臣恐为变。必据兵卫宫，慎毋送丧，为人所制！”辛巳，太后崩。
+> 秋，七月，太后病甚，乃令赵王禄为上将军，吕王产居南军，诫产、禄曰：“吕氏之王，大臣弗平。我即崩，帝年少，大臣恐为变。必据兵卫宫，慎毋送丧，为人所制！”辛巳，太后崩。硃虚侯以吕禄女为妇，故知诸吕欲为乱，乃阴令人告其兄齐王，欲令发兵西，硃虚侯、东牟侯为内应，以诛诸吕，立齐王为帝。八月，丙午，齐王欲使人诛相。相闻之，乃发卒卫王宫。于是齐王以驷钧为相，魏勃为将军，祝午为内史，悉发国中兵。遗诸侯王书，陈诸吕之罪，欲举兵诛之。相国吕产等闻之，乃遣颍阴侯灌婴将兵击之。灌婴至荥阳，谋曰：“诸吕拥兵关中，欲危刘氏而自立。今我破齐还报，此益吕氏之资也。”乃留屯荥阳，使使谕齐王及诸侯与连和，以待吕氏变，共诛之。
 
-> 诸吕欲为乱，畏大臣绛、灌等，未敢发。硃虚侯以吕禄女为妇，故知其谋，乃阴令人告其兄齐王，欲令发兵西，硃虚侯、东牟侯为内应，以诛诸吕，立齐王为帝。齐王乃与其舅驷钧、郎中令祝午、中尉魏勃阴谋发兵。齐相召平弗听。八月，丙午，齐王欲使人诛相。相闻之，乃发卒卫王宫。魏勃绐召平曰：“王欲发兵，非有汉虎符验也。而相君围王固善，勃请为君将兵卫王。”召平信之。勃既将兵，遂围相府，召平自杀。于是齐王以驷钧为相，魏勃为将军，祝午为内史，悉发国中兵。使祝午东诈琅邪王曰：“吕氏作乱，齐王发兵欲西诛之。齐王自以年少，不习兵革之事，愿举国委大王。大王，自高帝将也。请大王幸之临菑，见齐王计事。”琅邪王信之，西驰见齐王。齐王因留琅邪王，而使祝午尽发琅邪国兵，并将之。琅邪王说齐王曰：“大王，高皇帝適长孙也，当立。今诸大臣狐疑未有所定，而泽于刘氏最为长年，大臣固待泽决计。今大王留臣，无为也，不如使我入关计事。”齐王以为然，乃益具车送琅邪王。琅邪王既行，齐遂举兵西攻济南。遗诸侯王书，陈诸吕之罪，欲举兵诛之。相国吕产等闻之，乃遣颍阴侯灌婴将兵击之。灌婴至荥阳，谋曰：“诸吕拥兵关中，欲危刘氏而自立。今我破齐还报，此益吕氏之资也。”乃留屯荥阳，使使谕齐王及诸侯与连和，以待吕氏变，共诛之。齐王闻之，乃还兵西界待约。
+> 吕禄、吕产欲作乱，内惮绛侯、硃虚等，外畏齐、楚兵，又恐灌婴畔之。欲待灌婴兵与齐合而发，犹豫未决。当是时，赵王禄、梁王产各将兵居南、北军。皆吕氏之人也。列侯群臣莫自坚其命。太尉绛侯勃不得主兵。绛侯乃与丞相陈平谋，使人劫郦商，令其子寄往绐说吕禄曰：“高帝与吕后共定天下，足下佩赵王印，不急之国守籓，乃为上将，将兵留此，为大臣诸侯所疑。何不归将印，以兵属太尉，与大臣盟而之国。齐兵必罢。”吕禄信然其计，欲以兵属太尉周勃。 九月，庚申旦，太尉复令郦寄与典客刘揭先说吕禄曰：“帝使太尉守北军，欲足下之国。急归将印辞去。不然，祸且起。”吕禄以为郦况不欺己，遂解印属典客，而以兵授太尉。太尉至军，行令军中曰：“为吕氏右袒，为刘氏左袒！”军中皆左袒，太尉遂将北军。吕产不知吕禄已去北军，乃入未央宫，欲为乱。至殿门，弗得入，平阳侯驰语太尉。太尉尚恐不胜诸吕，未敢公言诛之，太尉予卒千馀人。入未央宫门，见产廷中。遂击产，杀之郎中府吏厕中。辛酉，捕斩吕禄而笞杀吕嬃，使人诛燕王吕通而废鲁王张偃。
 
-> 吕禄、吕产欲作乱，内惮绛侯、硃虚等，外畏齐、楚兵，又恐灌婴畔之。欲待灌婴兵与齐合而发，犹豫未决。当是时，济川王太、淮阳王武、常山王朝及鲁王张偃皆年少，未之国，居长安；赵王禄、梁王产各将兵居南、北军。皆吕氏之人也。列侯群臣莫自坚其命。太尉绛侯勃不得主兵。曲周侯郦商老病，其子寄与吕禄善。绛侯乃与丞相陈平谋，使人劫郦商，令其子寄往绐说吕禄曰：“高帝与吕后共定天下，刘氏所立九王，吕氏所立三王，皆大臣之议，事已布告诸侯，皆以为宜。今太后崩，帝少，而足下佩赵王印，不急之国守籓，乃为上将，将兵留此，为大臣诸侯所疑。足下何不归将印，以兵属太尉，请梁王归相国印，与大臣盟而之国。齐兵必罢，大臣得安，足下高枕而王千里，此万世之利也。”吕禄信然其计，欲以兵属太尉。使人报吕产及诸吕老人，或以为便，或曰不便，计犹豫未有所决。吕禄信郦寄，时与出游猎，过其姑吕嬃。嬃大怒曰：“若为将而弃军，吕氏今无处矣！”乃悉出珠玉、宝器散堂下，曰：“毋为他人守也！”
+> 神器者，有德者持之，如德不至，则恐祸及子孙，吕太后是也，吕氏之祸皆因大封吕氏王。然观唐武氏尚且代李氏称帝，武氏之后大抵却得以保全，何也?后世鉴之矣！
 
-> 九月，庚申旦，平阳侯窋行御史大夫事，见相国产计事。郎中令贾寿使从齐来，因数产曰：“王不早之国，今虽欲行，尚可得邪！”具以灌婴与齐、楚合从欲诛诸吕告产，且趣产急入宫。平阳侯颇闻其语，驰告丞相、太尉。太尉欲入北军，不得入。襄平侯纪通尚符节，乃令持节矫内太尉北军。太尉复令郦寄与典客刘揭先说吕禄曰：“帝使太尉守北军，欲足下之国。急归将印辞去。不然，祸且起。”吕禄以为郦况不欺己，遂解印属典客，而以兵授太尉。太尉至军，吕禄已去。太尉入军门，行令军中曰：“为吕氏右袒，为刘氏左袒！”军中皆左袒，太尉遂将北军。然尚有南军。丞相平乃召硃虚侯章佐太尉，太尉令硃虚侯监军门，令平阳侯告卫尉：“毋入相国产殿门。”吕产不知吕禄已去北军，乃入未央宫，欲为乱。至殿门，弗得入，徘徊往来。平阳侯恐弗胜，驰语太尉。太尉尚恐不胜诸吕，未敢公言诛之，乃谓硃虚侯曰：“急入宫卫帝！”硃虚侯请卒，太尉予卒千馀人。入未央宫门，见产廷中。日饣甫时，遂击产，产走。天风大起，以故其从官乱，莫敢斗，逐产，杀之郎中府吏厕中。硃虚侯已杀产，帝命谒者持节劳硃虚侯。硃虚侯欲夺其节，谒者不肯。硃虚侯则从与载，因节信驰走，斩长乐卫尉吕更始。还，驰入北军报太尉。太尉起，拜贺硃虚侯曰：“所患独吕产。今已诛，天下定矣！”遂遣人分部悉捕诸吕男女，无少长皆斩之。辛酉，捕斩吕禄而笞杀吕嬃，使人诛燕王吕通而废鲁王张偃。戊辰，徙济川王王梁。遣硃虚侯章以诛诸吕事告齐王，令罢兵。灌婴在荥阳，闻魏勃本教齐王举兵，使使召魏勃至，责问之。勃曰：“失火之家，岂暇先言丈人而后救火乎！”因退立，股战而栗，恐不能言者，终无他语。灌将军熟视笑曰：“人谓魏勃勇，妄庸人耳，何能为乎！”乃罢魏勃。灌婴兵亦罢荥阳归。
 
-> 班固赞曰：孝文时，天下以郦寄为卖友。夫卖友者，谓见利而忘义也。若寄父为功臣而又执劫，虽摧吕禄以安社稷，谊存君亲可也。
+#### 文帝之立
 
-> 诸大臣相与阴谋曰：“少帝及梁、淮阳、恒山王，皆非真孝惠子也。吕后以计诈名他人子，杀其母养后宫，令孝惠子之，立以为后及诸王，以强吕氏。今皆已夷灭诸吕，而所立即长，用事，吾属无类矣。不如视诸王最贤者立之。”或言：“齐王，高帝长孙，可立也。”大臣皆曰：“吕氏以外家恶而几危宗庙，乱功臣。今齐王舅驷钧，虎而冠。即立齐王，复为吕氏矣。代王方今高帝见子最长，仁孝宽厚，太后家薄氏谨良。且立长固顺，况以仁孝闻天下乎！”乃相与共阴使人召代王。
+> 诸大臣相与谋曰：“少帝及梁、淮阳、恒山王，皆非真孝惠子也。吕后以计诈名他人子，立以为后及诸王，以强吕氏。今皆已夷灭诸吕，不如视诸王最贤者立之。”或言：“齐王，高帝长孙，可立也。”大臣皆曰：“代王方今高帝见子最长，仁孝宽厚，太后家薄氏谨良。且立长固顺，况以仁孝闻天下乎！”乃相与共阴使人召代王。
 
-> 代王问左右，郎中令张武等曰：“汉大臣皆故高帝时大将，习兵，多谋诈。此其属意非止此也，特畏高帝、吕太后威耳。今已诛诸吕，新疌血京师，此以迎大王为名，实不可信。愿大王称疾毋往，以观其变。”中尉宋昌进曰：“群臣之议皆非也。夫秦失其政，诸侯、豪桀并起，人人自以为得之者以万数，然卒践天子之位者，刘氏也，天下绝望，一矣。高帝封王子弟，地犬牙相制，此所谓磐石之宗也，天下服其强，二矣。汉兴，除秦苛政，约法令，施德惠，人人自安，难动摇，三矣。夫以吕太后之严，立诸吕为三王，擅权专制；然而太尉以一节入北军一呼，士皆左袒为刘氏，叛诸吕，卒以灭之。此乃天授，非人力也。今大臣虽欲为变，百姓弗为使，其党宁能专一邪？方今内有硃虚、东牟之亲，外畏吴、楚、淮阳、琅邪、齐、代之强。方今高帝子，独淮南王与大王。大王又长，贤圣仁孝闻于天下，故大臣因天下之心而欲迎立大王。大王勿疑也。”代王报太后计之。犹豫未定，卜之，兆得大横。占曰：“大横庚庚，余为天王，夏启以光。”代王曰：“寡人固已为王矣，又何王？”卜人曰：“所谓天王者，乃天子也。”于是代王遣太后弟薄昭往见绛侯，绛侯等具为昭言所以迎立王意。薄昭还报曰：“信矣，无可疑者。”代王乃笑谓宋昌曰：“果如公言。”乃命宋昌参乘，张武等六人乘传，从诣长安。至高陵，休止，而使宋昌先驰之长安观变。昌至渭桥，丞相以下皆迎。昌还报。代王驰至渭桥，群臣拜谒称臣，代王下车答拜。太尉勃进曰：“愿请间。”宋昌曰：“所言公，公言之；所言私，王者无私。”太尉乃跪上天子玺、符。代王谢曰：“至代邸而议之。”
+> 代王问左右，郎中令张武等曰：“汉大臣皆故高帝时大将，习兵，多谋诈，今已诛诸吕，此以迎大王为名，实不可信。”中尉宋昌进曰：“方今高帝子，独淮南王与大王。大王又长，贤圣仁孝闻于天下，故大臣因天下之心而欲迎立大王。大王勿疑也。”代王报太后计之。犹豫未定，卜之，兆得大横。于是代王遣太后弟薄昭往见绛侯，绛侯等具为昭言所以迎立王意。代王乃笑谓宋昌曰：“果如公言。”乃命宋昌参乘，张武等六人乘传，从诣长安。至高陵，休止，而使宋昌先驰之长安观变。代王驰至渭桥，群臣拜谒称臣，代王下车答拜。太尉勃进曰：“愿请间。”宋昌曰：“所言公，公言之；所言私，王者无私。”太尉乃跪上天子玺、符。代王谢曰：“至代邸而议之。”
 
-> 后九月，己酉晦，代王至长安，舍代邸，群臣从至邸。丞相陈平等皆再拜言曰：“子弘等皆非孝惠子，不当奉宗庙。大王，高帝长子，宜为嗣。愿大王即天子位。”代王西乡让者三，南乡让者再，遂即天子位。群臣以礼次侍。东牟侯兴居曰：“诛吕氏，臣无功，请得除宫。”乃与太仆汝阴侯滕公入宫，前谓少帝曰：“足下非刘氏子，不当立！”乃顾麾左右执戟者掊兵罢去；有数人不肯去兵，宦者令张释谕告，亦去兵。滕公乃召乘舆车载少帝出。少帝曰：“欲将我安之乎？”滕公曰：“出就舍。”舍少府。乃奉天子法驾迎代王于邸，报曰：“宫谨除。”代王即夕入未央宫。有谒者十人持戟卫端门，曰：“天子在也，足下何为者而入？”代王乃谓太尉。太尉往谕，谒者十人皆掊兵而去，代王遂入。夜，拜宋昌为卫将军，镇抚南北军；以张武为郎中令，行殿中。有司分部诛灭梁、淮阳、恒山王及少帝于邸。文帝还坐前殿，夜，下诏书赦天下。
+> 后九月，己酉晦，代王至长安，舍代邸。滕公乃召乘舆车载少帝出。乃奉天子法驾迎代王于邸，报曰：“宫谨除。”代王即夕入未央宫。有谒者十人持戟卫端门，曰：“天子在也，足下何为者而入？”代王乃谓太尉。太尉往谕，谒者十人皆掊兵而去，代王遂入。有司分部诛灭梁、淮阳、恒山王及少帝于邸。文帝还坐前殿，夜，下诏书赦天下。
 
 ### 太宗孝文皇帝元年壬戌（前179）
 
@@ -164,7 +151,7 @@ date: 2022-12-28 15:43:01
 
 > 上闻河南守吴公治平为天下第一，召以为廷尉。吴公荐洛阳人贾谊，帝召以为博士。是时贾生年二十馀。帝爱其辞博，一岁中，超迁至太中大夫。贾生请改正朔，易服色，定官名，兴礼乐，以立汉制，更秦法。帝谦让未遑也。
 
-### 太宗孝文皇帝二年癸亥（前178）
+### 孝文二年癸亥（前178）
 
 <hr/>
 
