--- a/_posts/2022-12-27-读《资治通鉴》札记（十）.md
+++ b/_posts/2022-12-27-读《资治通鉴》札记（十）.md
@@ -223,3 +223,7 @@ date: 2022-12-27 15:43:01
 #### 评曰：
 
 > 高祖颇能用人，所以得成帝业，但晚年屠杀功臣太甚。这些异姓王才不如高祖，恐怕未必均有反心！
+
+> 然后高组后期大杀功臣，实在不能称之为英明，所以导致吕氏之乱时诸侯只自保。
+
+> 对于吕太后始乱弃，导致太祖崩后太后大封吕氏，出现吕氏之乱。
