--- a/_posts/2022-12-28-读《资治通鉴》札记（十一）.md
+++ b/_posts/2022-12-28-读《资治通鉴》札记（十一）.md
@@ -105,7 +105,9 @@ date: 2022-12-28 15:43:01
 > 吕禄、吕产欲作乱，内惮绛侯、硃虚等，外畏齐、楚兵，又恐灌婴畔之。欲待灌婴兵与齐合而发，犹豫未决。当是时，赵王禄、梁王产各将兵居南、北军。皆吕氏之人也。列侯群臣莫自坚其命。太尉绛侯勃不得主兵。绛侯乃与丞相陈平谋，使人劫郦商，令其子寄往绐说吕禄曰：“高帝与吕后共定天下，足下佩赵王印，不急之国守籓，乃为上将，将兵留此，为大臣诸侯所疑。何不归将印，以兵属太尉，与大臣盟而之国。齐兵必罢。”吕禄信然其计，欲以兵属太尉周勃。 九月，庚申旦，太尉复令郦寄与典客刘揭先说吕禄曰：“帝使太尉守北军，欲足下之国。急归将印辞去。不然，祸且起。”吕禄以为郦况不欺己，遂解印属典客，而以兵授太尉。太尉至军，行令军中曰：“为吕氏右袒，为刘氏左袒！”军中皆左袒，太尉遂将北军。吕产不知吕禄已去北军，乃入未央宫，欲为乱。至殿门，弗得入，平阳侯驰语太尉。太尉尚恐不胜诸吕，未敢公言诛之，太尉予卒千馀人。入未央宫门，见产廷中。遂击产，杀之郎中府吏厕中。辛酉，捕斩吕禄而笞杀吕嬃，使人诛燕王吕通而废鲁王张偃。
 
 > 神器者，有德者持之，如德不至，则恐祸及子孙，吕太后是也，吕氏之祸皆因大封吕氏王。然观唐武氏尚且代李氏称帝，武氏之后大抵却得以保全，何也?后世鉴之矣！
-
+> 吕氏之乱实由太祖始之，太后出生低位，又年老色衰，自然不会得到好色的太祖亲近。然吕后子女惠帝鲁元公主相继崩逝，吕后一个女子自然无所依靠，不得不依靠母家以自保。
+> 吕后以兵权托付吕家，并且大杀诸刘，导致刘吕两家矛盾加剧，然吕家实无可用之才，因此诸吕相继被除。
+> 刘氏当时无大权，刘吕选之，对于诸侯而言自然刘氏更加可塑可控，如选吕氏则可能出现吕氏代刘，天下大乱，秦朝之鉴就在眼前。
 
 #### 文帝之立
 
