--- a/_posts/2022-12-30-咪咕MGV3000研究 .md
+++ b/_posts/2022-12-30-咪咕MGV3000研究 .md
@@ -7,3 +7,39 @@ date: 2022-12-30 12:01:01
 
 
 暫時沒有找到開啓ADB的方法
+
+https://www.znds.com/tv-1222451-1-1.html
+
+江苏咪咕电视盒子刷机这个教程大家都比较需要，本次楼主带来了江苏咪咕MGV3000_YST代工_S905L3_线刷固件包，文中附固件下载链接，有需要的千万不要错过了。
+
+
+
+
+一、教程：
+1、准备好一根双公头USB线刷刷机线，长度30-50CM长度最佳，同时准备一台电脑，拆开盒子；
+
+2、电脑上安装好刷机工具Amlogic USB Burning Tool v2.1.6软件→打开软件→文件→导入烧录包→把【擦除flash】和【擦除bootloader】两项勾选→点击【开始】；
+
+3、盒子接电源线→电源关闭→把USB线一端插上盒子→保持短接→USB另一端插上电脑→通电开机。
+
+就可以看到进度条在跑了（此时松开短接），耐心等待进度条跑完；等待提示成功字样后，关闭电源，拔掉刷机线，把机顶盒接上电视机，通电开机，首次开机稍微会有点慢，耐心等待初始化完成即可。
+
+江苏咪咕MGV3000_YST代工_S905L3_线刷固件包
+
+江苏咪咕MGV3000_YST代工_S905L3_线刷固件包
+
+
+
+
+固件下载链接：
+链接: https://pan.baidu.com/s/104NHWG0t_33yjy3FCSg78Q
+提取码:
+imuq
+
+MGV3000_CJZM_线刷.img.zip 已经转存
+
+https://www.znds.com/tv-1222182-1-1.html
+
+
+其它固件大全
+https://www.znds.com/tv-1181374-1-1.html
