--- a/_posts/2022-12-30-咪咕MGV3200研究.md
+++ b/_posts/2022-12-30-咪咕MGV3200研究.md
@@ -127,5 +127,89 @@ am start com.dangbei.tvlauncher
 国科的芯片性能还可以
 4K 60帧解码没压力
 
+<hr/>
+
+## ADB 卡刷
 
 <hr/>
+
+最近看到论坛有很多免费的固件，但都是一些利用adb命令作为基础刷机的，简单的看了下作者有的没有说明太详细的教程，今天我就给大家从头到尾讲解下ADB命令刷机究竟怎么操作？
+首先感谢@托塔李天王 提供的免费固件，和ADB工具（点击下载）
+
+
+首先是如何打开adb工具，有几种方法：
+方法一：下载完adb工具压缩包，解压，然后可以得到如下图所示的五个文件，然后点击cmd.exe文件；如果电脑没有反应，可以在当前的路径框中直接输入cmd，回车即可；或者也可以在adb文件夹下，空白处按住Shift并右键鼠标，选择在此处打开命令窗口；
+关于ADB刷机命令的操作教程，最全集合（附带adb工具） 关于ADB刷机命令的操作教程，最全集合（附带adb工具）
+最终得到一个cmd命令窗口，就说明已经打开了adb命令使用工具；
+关于ADB刷机命令的操作教程，最全集合（附带adb工具）
+
+方法二：
+百度搜索刷机精灵安装，或者直接点击下载，安装即可；
+关于ADB刷机命令的操作教程，最全集合（附带adb工具）
+安装完打开，在其他板块里找到adb命令行，点击打开，可以直接调用起adb命令窗口，如下图所示：
+关于ADB刷机命令的操作教程，最全集合（附带adb工具）
+
+两种方法，都可以使用，自己随意挑选，以上就是adb命令工具是如何打开的；下面说一下使用教程；
+以@托塔李天王 分享的烽火HG680-KB这篇为例：（adb命令其实很简单，按步骤一行一串代码输入就可以的）
+关于ADB刷机命令的操作教程，最全集合（附带adb工具）
+大家刚看到这个命令肯定是懵的，其实作者标明的已经很清晰明了；我给大家放到adb工具里，截图一看便知；
+关于ADB刷机命令的操作教程，最全集合（附带adb工具）
+如图所示，（所有红色框的都是自己输入的命令行，注意每个词之间的空格）
+第一行命令：adb connect ip 链接到机顶盒的adb，利用ip地址，此处ip以自己盒子的为准；
+第二行命令：adb shell 是获取到盒子的信息，返回的是root@Hi3798HV3I0：这就说明你成功的链接到了盒子的adb，可以开始接下来的操作了；
+
+第三行命令：mount | grep system 是识别盒子的闪存；
+输出有 ubifs 字样说明是 nand闪存；输出有 ext4 字样的是 emmc闪存；如图所示，我这台盒子是emmc的闪存，所以接下来的命令是需要emmc的教程，这点作者也已经给划分出来了；大家按照一行一条命令输入即可；
+
+第四行命令：df 它是查询U盘的路径；
+
+第五行命令：cd mnt/sda/sda*/ 输入此命令就可以直接到U盘路径下，如图所示，第四行命令显示的信息是mnt/sda/sda1，大家也可以把*号改成1；
+
+第六行命令：这条就需要区分开了，nand和emmc 是不同的命令行，nand的是dd if=recovery.img  of=/dev/block/mtdblock2；emmc的是dd if=/mnt/sda/sda1/recovery.img  of=/dev/block/platform/soc/by-name/recovery；大家不要输错了，最好可以直接复制命令行；
+
+第七行命令：同样也是区分的。
+nand是dd if=emmc  of=/dev/block/mtdblock4；
+emmc是dd if=emmc of=/dev/block/platform/soc/by-name/misc
+以上步骤等待adb窗口返回数据之后，也就是可以输入下一个命令的时候，刷机成功；
+
+第八行命令：reboot 此命令代表的是重启机顶盒，到此，所有的刷机步骤全部完成，工具也可以关闭了，盒子重启后就可以完美去浪了；
+
+是不是如此简单，具体对应到每个型号的命令，作者的固件包里也有对应的教程，大家变通一下就可以啦！！！
+好啦，以上就是关于ADB刷机命令的操作教程，最后再感谢下@托塔李天王 分享的免费刷机固件~~~
+
+<hr/>
+
+## 九联unt403G机顶盒6323处理器刷机教程；
+
+九联unt403G机顶盒6323处理器刷机教程；
+
+下载固件之前请先确认您的盒子是否能正常打开adb功能；
+
+打开方法：点此查看；能正常打开就接着往下看，打不开的
+
+请联系本站的在线客服求助；
+
+优盘1个别大于8G最佳，将其格式化为fat32格式备好；
+
+如您没合适的优盘可点此处到麒麟商城下单1个专用优盘；
+
+点此下载专用解压工具安装至电脑；
+
+刷机固件：请点击最上面的固件下载按钮获取固件并下载解压备好；
+
+将机顶盒的网线插到路由器上，不要插到猫的iptv口；
+
+将固件内update.zip、YueMe_BOX文件夹一同拷贝到U盘根目录；
+
+然后电脑上运行固件包里的***rec.exe程序，见下图
+
+adb.jpg
+
+然后输入机顶盒网络里的ip地址 然后回车键
+
+（可根据程序内的提示进行操作）；
+
+然后将复制号文件的U盘插机顶盒，盒子会自动复制文件并刷机；
+刷机完成后盒子会自动重启，优化系统程序完成启动到主界面会自动安装应用市场，
+自己手上有什么好用的电视app可以放在优盘的YueMe_BOX文件夹
+插入优盘开机后系统会自动帮你安装好；
