汉文帝 韩信 简史参考资料等
汉文帝 韩信 简史参考资料等

--- a/_posts/2022-03-03-中华简史_三国.md
+++ b/_posts/2022-03-03-中华简史_三国.md
@@ -1306,3 +1306,14 @@ description: 魏蜀吴三国鼎立，三国征伐导致大量人口损失。
 
 目　初，晋王昭娶王肃之女，生炎及攸，以攸继景王后。攸性孝友，多材艺，清和平尤，名过于炎，昭爱之，常曰：“天下者，景王之天下也，吾百年后，大业宜归攸。”炎立发委地，手垂过膝；羊绣又教以宜察时政所宜损益，豫记以备访问。昭欲以攸为世子，山涛曰：“废长立少，违礼不祥。”贾充、何曾、裴秀曰：“中抚军聪明神武，有超世之才，人望既茂，天表如此，固非人臣之相也。”乃立炎为世子。
 ```
+
+
+## 参考文献
+
+> 《三国志》 晋 陈寿 刘宋 裴松之 注
+
+> 《资治通鉴》 宋 司马光
+
+> 《纲鉴易知录 》清代 吴乘权
+
+> 《纲鉴合编》 王凤洲 袁了凡
