--- a/_posts/2022-03-03-中华简史_五代.md
+++ b/_posts/2022-03-03-中华简史_五代.md
@@ -1874,3 +1874,14 @@ description: 朱温篡唐，中国再次进入乱世。
 
 右后周三主，共十年。
 ```
+
+
+## 参考文献
+
+> 《》 
+
+> 《资治通鉴》 宋 司马光
+
+> 《纲鉴易知录 》清代 吴乘权
+
+> 《纲鉴合编》 王凤洲 袁了凡
