--- a/_posts/2022-03-03-中华简史_南北朝.md
+++ b/_posts/2022-03-03-中华简史_南北朝.md
@@ -2587,3 +2587,13 @@ description: 五胡乱华，中国历史上的第一个大乱世。
 
 目　西域诸胡，多至张掖交市，帝使吏部侍郎裴矩掌之。矩知帝好远略，访诸商胡，以其国山川、风俗，撰西域图记三卷，入朝奏之。且云：“今羌、胡之国，并因商人密送诚款，引领翘首，愿为臣妾。若服而抚之，务存安辑，混一戎、夏，其在兹乎！”帝大悦。矩因盛言“胡中多诸珍宝”。帝于是慨然将通西域。以矩为黄门侍郎，复使至张掖，引致诸胡，啖之以利，劝令入朝。自是，西域诸胡往来相继，所经郡县，糜费以万万计，卒令中国疲弊，以至于亡，矩唱之也。
 ```
+
+## 参考文献
+
+> 《》 
+
+> 《资治通鉴》 宋 司马光
+
+> 《纲鉴易知录 》清代 吴乘权
+
+> 《纲鉴合编》 王凤洲 袁了凡
