--- a/_posts/2022-03-03-中华简史_史前.md
+++ b/_posts/2022-03-03-中华简史_史前.md
@@ -232,3 +232,16 @@ description: 史前时期多以传说为主，但不可不信。
 > 时有苗弗率，帝命禹徂征。三旬，苗民逆命，禹班师。帝乃诞敷文德，舞干、羽于两阶。七旬有苗格。
 
 > 癸酉，四十有八载，帝南巡狩，崩于苍梧之野。
+
+
+## 参考文献
+
+> 《》 
+
+> 《史记》 西汉 司马迁 
+
+> 《资治通鉴》 宋 司马光
+
+> 《纲鉴易知录 》清代 吴乘权
+
+> 《纲鉴合编》 王凤洲 袁了凡
