--- a/_posts/2022-03-03-中华简史_宋辽金.md
+++ b/_posts/2022-03-03-中华简史_宋辽金.md
@@ -11020,3 +11020,15 @@ description: 少数民族入侵中原，民族大融和的重要时期。
 
 右南宋九帝，共一百五十三年。合两宋一十八帝，共三百二十年。
 ```
+
+## 参考文献
+
+> 《》 
+
+> 《史记》 西汉 司马迁 
+
+> 《资治通鉴》 宋 司马光
+
+> 《纲鉴易知录 》清代 吴乘权
+
+> 《纲鉴合编》 王凤洲 袁了凡
