--- a/_posts/2022-03-03-中华简史_明.md
+++ b/_posts/2022-03-03-中华简史_明.md
@@ -8069,3 +8069,15 @@ description: 太祖朱元璋创立大明王朝。
 
 编　五月，我大清定鼎顺天。
 ```
+
+## 参考文献
+
+> 《》 
+
+> 《明史》 清 张廷玉等
+
+> 《资治通鉴》 宋 司马光
+
+> 《纲鉴易知录 》清代 吴乘权
+
+> 《纲鉴合编》 王凤洲 袁了凡
