--- a/_posts/2022-03-03-中华简史_隋.md
+++ b/_posts/2022-03-03-中华简史_隋.md
@@ -572,3 +572,15 @@ description: 太祖杨坚创业至炀帝广而亡，呜呼哀哉。
 
 纲　十一月，唐秦王世民击宋金刚，屯柏壁。
 ```
+
+## 参考文献
+
+> 《》 
+
+> 《隋书》 唐 魏征 
+
+> 《资治通鉴》 宋 司马光
+
+> 《纲鉴易知录 》清代 吴乘权
+
+> 《纲鉴合编》 王凤洲 袁了凡
