--- a/_posts/2022-12-28-读《资治通鉴》札记（十一）.md
+++ b/_posts/2022-12-28-读《资治通鉴》札记（十一）.md
@@ -155,6 +155,8 @@ date: 2022-12-28 15:43:01
 
 > 释之从行，登虎圈，上问上林尉诸禽兽簿。尉左右视，尽不能对。虎圈啬夫从旁代尉对，口对响应，无穷者。帝曰：“吏不当若是邪！尉无赖！”乃诏释之拜啬夫为上林令。释之久之前，曰：“陛下以绛侯周勃何如人也？”上曰：“长者也。”又复问：“东阳侯张相如何如人也？”上复曰：“长者。”释之曰：“夫绛侯、东阳侯称为长者，此两人言事曾不能出口，岂效此啬夫喋喋利口捷给哉！且秦以任刀笔之吏，争以亟疾苛察相高。其敝，徒文具而无实，不闻其过，陵迟至于土崩。今陛下以啬夫口辨而超迁之，臣恐天下随风而靡，争为口辨而无其实。夫下之化上，疾于景响，举错不可不审也。”帝曰：“善！”乃不拜啬夫。上就车，诏释之参乘。徐行，问释之秦之敝，具以质言。至宫，上拜释之为公车令。
 
+> 这些年社会上能说会道的人越来越吃香，却没人借鉴“上林观虎”，实在可惜。那种能说会道不做事的人却拿着高收入，真正做事，不善于表达的人却混不开。以致什么厚黑学，口才，交际一类的书记畅销异常。
+
 ### 太宗孝文皇帝四年乙丑（前176）
 
 <hr/>
@@ -223,54 +225,29 @@ date: 2022-12-28 15:43:01
 
 <hr/>
 
-> 冬，匈奴老上单于十四万骑入朝那、萧关，杀北地都尉卬，虏人民畜产甚多；遂至彭阳，使奇兵入烧回中宫，候骑至雍甘泉。帝以中尉周舍、郎中令张武为将军，发车千乘、骑卒十万军长安旁，以备胡寇；而拜昌侯卢卿为上郡将军，甯侯魏为北地将军，隆虑侯周灶为陇西将军，屯三郡。上亲劳军，勒兵，申教令，赐吏卒，自欲征匈奴。群臣谏，不听；皇太后固要，上乃止。于是以东阳侯张相如为大将军，成侯董赤、内史栾布皆为将军，击匈奴。单于留塞内月馀，乃去。汉逐出塞即还，不能有所杀。
+> 冬，匈奴老上单于十四万骑入关，候骑至雍甘泉。帝以中尉周舍、郎中令张武为将军，发车千乘、骑卒十万军长安旁，以备胡寇，自欲征匈奴。群臣谏，不听。皇太后固要，上乃止。于是以东阳侯张相如为大将军，成侯董赤、内史栾布皆为将军，击匈奴。单于留塞内月馀，乃去。汉逐出塞即还，不能有所杀。
 
-> 上辇过郎署，问郎署长冯唐曰：“父家安在？”对曰：“臣大父赵人，父徙代。”上曰：“吾居代时，吾尚食监高祛数为我言赵将李齐之贤，战于巨鹿下。今吾每饭意未尝不在巨鹿也。父知之乎？”唐对曰：“尚不如廉颇、李牧之为将也。”上搏髀曰：“嗟乎！吾独不得廉颇、李牧为将！吾岂忧匈奴哉！”唐曰：“陛下虽得廉颇、李牧，弗能用也。”上怒，起，入禁中，良久，召唐，让曰：“公奈何众辱我，独无间处乎！”唐谢曰：“鄙人不知忌讳。”上方以胡寇为意，乃卒复问唐曰：“公何以知吾不能用廉颇、李牧也？”唐对曰：“臣闻上古王者之遣将也，跪而推毂，曰：‘阃以内者，寡人制之；阃以外者，将军制之。’军功爵赏皆决于外，归而奏之，此非虚言也。臣大父言：李牧为赵将，居边，军市之租，皆自用飨士；赏赐决于外，不从中覆也。委任而责成功，故李牧乃得尽其智能；选车千三百乘，彀骑万三千，百金之士十万，是以北逐单于，破东胡，灭澹林，西抑强秦，南支韩、魏。当是之时，赵几霸。其后会赵王迁立，用郭开谗，卒诛李牧，令颜聚代之；是以兵破士北，为秦所禽灭。今臣窃闻魏尚为云中守，其军市租尽以飨士卒，私养钱五日一椎牛，自飨宾客、军吏、舍人，是以匈奴远避，不近云中之塞。虏曾一入，尚率车骑击之，所杀甚众。夫士卒尽家人子，起田中从军，安知尺籍、伍符！终日力战，斩首捕虏，上功幕府，一言不相应，文吏以法绳之，其赏不行，而吏奉法必用。臣愚以为陛下赏太轻，罚太重。且云中守魏尚坐上功首虏差六级，陛下下之吏，削其爵，罚作之。由此言之，陛下虽得廉颇、李牧，弗能用也！”上说。是日，令唐持节赦魏尚，复以为云中守，而拜唐为车骑都尉。春，诏广增诸祀坛场、珪币，且曰：“吾闻祠官祝釐，皆归福于朕躬，不为百姓，朕甚愧之。夫以朕之不德，而专飨独美其福，百姓不与焉，是重吾不德也。其令祠官致敬，无有所祈！”
+#### 冯唐论将
 
-> 是岁，河间文王辟强薨。
-
-> 初，丞相张苍以为汉得水德，鲁人公孙臣以为汉当土德，其应，黄龙见；苍以为非是，罢之。
-
+> 上辇过郎署，问郎署长冯唐曰：“吾居代时，曾闻李齐之贤，父知之乎？”唐对曰：“尚不如廉颇、李牧之为将也。”上搏髀曰：“嗟乎！吾独不得廉颇、李牧为将！吾岂忧匈奴哉！”唐曰：“陛下虽得廉颇、李牧，弗能用也。”上怒，起，入禁中，良久，召唐，上方以胡寇为意，乃卒复问唐曰：“公何以知吾不能用廉颇、李牧也？”唐对曰：“臣闻上古王者之遣将也，跪而推毂，曰：‘阃（kǔn，统兵在外的将帅或机构。）以内者，寡人制之；阃以外者，将军制之。’臣大父言：李牧为赵将，居边，军市之租，皆自用飨士；赏赐决于外，不从中覆也，故李牧乃得尽其智能。是以北逐单于，破东胡，灭澹林，西抑强秦，南支韩、魏。后赵王迁立，卒诛李牧，令颜聚代之；是以兵破士北，为秦所禽灭。今臣窃闻魏尚为云中守，其军市租尽以飨士卒，私养钱五日一椎牛，自飨宾客、军吏、舍人，是以匈奴远避，不近云中之塞。夫士卒尽家人子，起田中从军，安知尺籍、伍符，终日力战！一言不相应，文吏以法绳之，其赏不行，而吏奉法必用。臣愚以为陛下赏太轻，罚太重。且云中守魏尚坐上功首虏差六级（多报杀6个敌人的首级），陛下下之吏，削其爵，罚作之。由此言之，陛下虽得廉颇、李牧，弗能用也！”上说。是日，令唐持节赦魏尚，复为云中守，拜唐为车骑都尉
 
 ### 太宗孝文皇帝十五年丙子（前165）
 
 <hr/>
 
-> 春，黄龙见成纪。帝召公孙臣，拜为博士，与诸生申明土德，草改历、服色事。张苍由此自绌。
-
-> 夏，四月，上始幸雍，郊见五帝，赦天下。
-
-> 九月，诏诸侯王、公卿、郡守举贤良、能直言极谏者，上亲策之。太子家令晁错对策高第，擢为中大夫。错又上言宜削诸侯及法令可更定者书凡三十篇。上虽不尽听，然奇其材。
-
-> 是岁，齐文王则、河间哀王福皆薨，无子，国除。
-
-> 赵人新垣平以望气见上，言长安东北有神气，成五采，于是作渭阳五帝庙。
-
 ### 太宗孝文皇帝十六年丁丑（前164）
 
 <hr/>
 
-> 夏，四月，上郊祀上帝于渭阳五帝庙。于是贵新垣平至上大夫，赐累千金；而使博士、诸生刺《六经》中作《王制》，谋议巡狩、封禅事。又于长门道北立五帝坛。
-
-> 徙淮南王喜复为城阳王，又分齐为六国；丙寅，立齐悼惠王子在者六人：杨虚侯将闾为齐王，安都侯志为济北王，武成侯贤为菑川王，白石侯雄渠为胶东王，平昌侯卬为胶西王，扐侯辟光为济南王。淮南厉王子在者三人：阜陵安为淮南王，安阳侯勃为衡山王，阳周侯赐为庐江王。
-
-> 秋，九月，新垣平使人持玉杯上书阙下献之。平言上曰：“阙下有宝玉气来者。”已，视之，果有献玉杯者，刻曰“人主延寿”。平又言：“臣侯日再中。”居顷之，日却，复中。于是始更以十七年为元年，令天下大酺。平言曰：“周鼎亡在泗水中。今河决，通于泗，臣望东北汾阴直有金宝气，意周鼎其出乎！兆见，不迎则不至。”于是上使使治庙汾阴南，临河，欲祠出周鼎。
-
 ### 太宗孝文皇帝十七年戊寅（前163）
 
-> 冬，十月，人有上书告新垣平“所言谐诈也”；下吏治，诛夷平。是后，上亦怠于改正、服、鬼神之事，而渭阳、长门五帝，使祠官领，以时致礼，不往焉。
-
-> 春，三月，孝惠皇后张氏薨。诏曰：“间者数年不登，又有水旱、疾疫之灾，朕甚忧之。愚而不明，未达其咎：意者朕之政有所失而行有过与？乃天道有不顺，地利或不得，人事多失和，鬼神废不享与？何以致此？将百官之奉养或废，无用之事或多与？何其民食之寡乏也？夫度田非益寡，而计民未加益，以口量地，其于古犹有馀，而食之甚不足者，其咎安在？无乃百姓之从事于末以害农者蕃，为酒醪以靡谷者多，六畜之食焉者众与？细大之义，吾未得其中，其与丞相、列侯、吏二千石、博士议之。有可以佐百姓者，率意远思，无有所隐！”
-
+<hr/>
 
 ### 太宗孝文皇帝十八年（己卯（前162）
 
 <hr/>
 
 > 匈奴连岁入边，杀略人民、畜产甚多；云中、辽东最甚，郡万馀人。上患之，乃使使遗匈奴书。单于亦使当户报谢，复与匈奴和亲。
-
-> 八月，戊戌，丞相张苍免。帝以皇后弟窦广国贤，有行，欲相之，曰：“恐天下以吾私广国，久念不可。”而高帝时大臣，馀见无可者。御史大夫梁国申屠嘉，故以材官蹶张从高帝，封关内侯；庚午，以嘉为丞相，封故安侯。嘉为人廉直，门不受私谒。是时，太中大夫邓通方爱幸，赏赐累巨万。帝尝燕饮通家，其宠幸无比。嘉尝入朝，而通居上旁，有怠慢之礼，嘉奏事毕，因言曰：“陛下幸爱群臣，则富贵之；至于朝廷之礼，不可以不肃。”上曰：“君勿言，吾私之。”罢朝，坐府中，嘉为檄召通诣丞相府，不来，且斩通。通恐，入言上；上曰：“汝第往，吾今使人召若。”通诣丞相，免冠、徒跣，顿首谢嘉。嘉坐自如，弗为礼，责曰：“夫朝廷者，高帝之朝廷也。通小臣，戏殿上，大不敬，当斩。吏！今行斩之！”通顿首，首尽出血，不解。上度丞相已困通，使使持节召通而谢丞相：“此吾弄臣，君释之！”邓通既至，为上泣曰：“丞相几杀臣！”
-
 
 ### 太宗孝文皇帝十九年庚辰（前161）
 
@@ -284,16 +261,39 @@ date: 2022-12-28 15:43:01
 
 > 冬，匈奴三万骑入上郡，三万骑入云中，所杀略甚众，烽火通于甘泉、长安。以中大夫令免为车骑将军，屯飞狐；故楚相苏意为将军，屯句注；将军张武屯北地；河内太守周亚夫为将军，次细柳；宗正刘礼为将军，次霸上，祝兹侯徐厉为将军，次棘门；以备胡。
 
+#### 周亚夫军细柳
+
 > 上自劳军，至霸上及棘门军，直驰入，将以下骑送迎。已而之细柳军，军士吏被甲，锐兵刃，彀弓弩持满，天子先驱至，不得入。先驱曰：“天子且至！”军门都尉曰；“将军令曰：‘军中闻将军令，不闻天子之诏！’”居无何，上至，又不得入。于是上乃使使持节诏将军：“吾欲入营劳军。”亚夫乃传言“开壁门”。壁门士请车骑曰：“将军约：军中不得驱驰。”于是天子乃按辔徐行。至营，将军亚夫持兵揖曰：“介胄之士不拜，请以军礼见。”天子为动，改容，式车，使人称谢：“皇帝敬劳将军。”成礼而去。既出军门，群臣皆惊。上曰：“嗟乎，此真将军矣！曩者霸上、棘门军若儿戏耳，其将固可袭而虏也。至于亚夫，可得而犯耶！”称善者久之。月馀，汉后至边，匈奴亦远塞，汉兵亦罢。乃拜周亚夫为中尉。
-
-> 夏，四月，大旱，蝗。令诸侯无入贡；弛山泽，减诸服御，损郎吏员；发仓庾以振民；民得卖爵。
-
 
 ### 太宗孝文皇帝二十三年甲申（前157）
 
 <hr/>
 
-> 夏，六月，已亥，帝崩于未央宫。遗诏曰：“朕闻之：盖天下万物之萌生，靡有不死。死者，天地之理，物之自然，奚可甚哀！当今之世，咸嘉生而恶死，厚葬以破业，重服以伤生，吾甚不取。且朕既不德，无在佐百姓；今崩，又使重服久临以罹寒暑之数，哀人父子，伤长老之志，损其饮食，绝鬼神之祭祀，以重吾不德，谓天下何！朕获保宗庙，以眇眇之身托于天下君王之上，二十有馀年矣。赖天之灵，社稷之福，方内安宁，靡有兵革。朕既不敏，常畏过行以羞先帝之遗德，惟年之久长，惧于不终。今乃幸以天年得复供养于高庙，其奚哀念之有！其令天下吏民：令到，出临三日，皆释服；毋禁取妇、嫁女、祠祀、饮酒、食肉，自当给丧事服临者，皆无跣；绖带毋过三寸；毋布车及兵器；毋发民哭临宫殿中；殿中当临者，皆以旦夕各十五举音，礼毕罢；非旦夕临时，禁毋得擅哭临；已下棺，服大功十五日，小功十四日，纤七日，释服。它不在令中者，皆以此令比类从事。布告天下，使明知朕意。霸陵山川因其故，毋有所改。归夫以下至少使。”乙巳，葬霸陵。帝即位二十三年，宫室、苑囿、车骑、服御，无所增益；有不便，辄驰以利民。尝欲作露台，召匠计之，直百金。上曰：“百金，中人十家之产也。吾奉先帝宫室，常恐羞之，何以台为！”身衣弋绨；所幸慎夫人，衣不曳地；帷帐无文绣；以示敦朴，为天下先。治霸陵，皆瓦器，不得以金、银、铜、锡为饰，因其山，不起坟。吴王诈病不朝，赐以几杖。群臣袁盎等谏说虽切，常假借纳用焉。张武等受赂金钱，觉，更加赏赐以愧其心；专务以德化民。是以海内安宁，家给人足，后世鲜能及之。丁未，太子即皇帝位，尊皇太后薄氏曰太皇太后，皇后曰皇太后。
+> 夏，六月，已亥，帝崩于未央宫。
+
+> 丁未，太子即皇帝位。
+
+## 评价
+
+> 太宗重农业，鼓励农桑，上亲耕以率天下之民，积极发展农业生产，开创一代盛世。
+
+> 太宗废相坐律令，赈孤寡孤独，施惠天下，诸侯、四夷远近欢洽。除肉刑，然死伤亦不减。
+
+> 太宗数求贤，然得贾谊却不能重用。然，颇多疑，贾谊，周勃皆郁郁而终。
+
+> 不教其弟，淮南王刘长最终被废，愤恚不食死。民有歌淮南王者曰：“一尺布，尚可缝；一斗粟，尚可舂；兄弟二人不相容！”帝闻而病之。薄昭之骄而死亦文帝之罪。
+
+> 上深纳其言，养臣下有节，是后大臣有罪，皆自杀，不受刑。文帝以太祖刑法过重而减刑，然却逼诸臣不受刑而自杀。
+
+> 众皆言太宗仁慈盖高祖，其实不然，太宗刑杀实超高祖，其所逼杀之臣远甚太祖。
+
+> 太宗时匈奴多次入侵，多为和亲，少亦有战，然并未影响生产。
+
+> 帝即位二十三年，宫室、苑囿、车骑、服御，无所增益；有不便，辄驰以利民。身衣弋绨；所幸慎夫人，衣不曳地；帷帐无文绣；以示敦朴，为天下先。
+
+> 遗诏以节俭，薄臧。治霸陵，皆瓦器，不得以金、银、铜、锡为饰，因其山，不起坟。
+
+> 专务以德化民。是以海内安宁，家给人足，后世鲜能及之
 
 ### 孝景皇帝元年乙酉（前156）
 
@@ -543,11 +543,3 @@ date: 2022-12-28 15:43:01
 
 > 汉兴，接秦之弊，作业剧而财匮，自天子不能具钧驷，而将相或乘牛车，齐民无藏盖。天下已平，高祖乃令贾人不得衣丝、乘车，重租税以困辱之。孝惠、高后时，为天下初定，复驰商贾之律；然市井之子孙，亦不得仕宦为吏。量吏禄，度官用，以赋于民。而山川、园池、市井租税之入，自天子以至于封君汤沐邑，皆各为私奉养焉，不领于天下之经费。漕转山东粟以给中都官，岁不过数十万石。继以孝文、孝景，清净恭俭，安养天下，七十馀年之间，国家无事，非遇水旱之灾，民则人给家足。都鄙廪庾皆满，而府库馀货财；京师之钱累巨万，贯朽而不可校；太仓之粟陈陈相因，充溢露积于外，至腐败不可食。众庶街巷有马，而阡陌之间成群，乘字牝者摈而不得聚会。守闾阎者食粱肉，为吏者长子孙，居官者以为姓号。故人人自爱而重犯法，先行义而后绌辱焉。当此之时，罔疏而民富，役财骄溢，或至兼并；豪党之徒，以武断于乡曲。宗室有土，公、卿、大夫以下，争于奢侈，室庐、舆服僭于上，无限度。物盛而衰，固其变也。自是之后，孝武内穷侈靡，外攘夷狄，天下萧然，财力耗矣！
 
-> 太宗重农业，鼓励农桑，积极发展农业生产，开创一代盛世。
-> 太宗废相坐律令，赈孤寡孤独，施惠天下，诸侯、四夷远近欢洽。除肉刑，然死伤亦不减。
-> 太宗数求贤，然得贾谊却不能重用。
-> 上亲耕以率天下之民。
-> 颇多疑，贾谊，周勃皆郁郁而终。
-> 不教其弟，淮南王刘长最终被废，愤恚不食死。民有歌淮南王者曰：“一尺布，尚可缝；一斗粟，尚可舂；兄弟二人不相容！”帝闻而病之。薄昭之骄而死亦文帝之罪。
-> 上深纳其言，养臣下有节，是后大臣有罪，皆自杀，不受刑。文帝以太祖刑法过重而减刑，然却逼诸臣不受刑而自杀。
-> 众皆言太宗仁慈盖高祖，其实不然，其所逼杀之臣远超太祖。
