--- a/_posts/2023-01-01-纪事2023.md
+++ b/_posts/2023-01-01-纪事2023.md
@@ -14,5 +14,13 @@ description: 2023年已经到了，放下过去的包袱，努力前行。
 ### 2023-01-02
 
 > 最近夜晚的西安到处事鞭炮烟花声，昨晚出去逛了一圈，很是热闹，旧日的烟火又回来了。
+
 > 近日有些拉肚子，不知道事感染了新版的新冠还是前几日的新冠还没好。
+
 > 今日早晨出行，路上的车人，非常多，看来慢慢的大家已经适应了，开始改变了对新冠的看法，勇敢面对生活。
+
+### 2023-01-05
+
+> 近日临近春节，地方政府对烟花管控的也比较松，每天晚上都有人大量的燃放，这几日空气质量越来越差，成天雾霾，感觉人嗓子也不是很舒服。
+
+> 路上的人和车躲起来了，上下班晚高峰的时候又开始堵车了，城市的烟火气越来越浓了。
