--- a/_posts/2022-03-03-中华简史_元.md
+++ b/_posts/2022-03-03-中华简史_元.md
@@ -2278,3 +2278,13 @@ description: 铁木真统一蒙古，蒙古人入主中原。
 
 右元十帝共八十九年。
 ```
+
+## 参考文献
+
+> 《》 
+
+> 《资治通鉴》 宋 司马光
+
+> 《纲鉴易知录 》清代 吴乘权
+
+> 《纲鉴合编》 王凤洲 袁了凡
