--- a/_posts/2022-03-03-中华简史_商.md
+++ b/_posts/2022-03-03-中华简史_商.md
@@ -466,4 +466,14 @@ description: 商汤灭夏，创立商王朝。
 
 > 商亡。
 
-##  右商二十八主，计六百四十四年。
+## 参考文献
+
+> 《》 
+
+> 《史记》 西汉 司马迁 
+
+> 《资治通鉴》 宋 司马光
+
+> 《纲鉴易知录 》清代 吴乘权
+
+> 《纲鉴合编》 王凤洲 袁了凡
