--- a/_posts/2022-03-03-中华简史_夏.md
+++ b/_posts/2022-03-03-中华简史_夏.md
@@ -172,5 +172,14 @@ description: 禹传子，家天下，中国历史进入奴隶社会。
 ## 孔甲乱夏
 >  孔家是夏王不降的儿子，但是他的性格乖张，没有治国的才能，所以他父亲就没把他考虑到继承人的范围中，而是把王位让给了弟弟扃。扃死后，他把王位传给了自己的儿子廑。廑后来病死了，王位就落到了孔甲手上。但是孔甲做事真的是一点也不上路子，淫乱不堪，信奉鬼神。他在位短短九年，就让夏后氏的德望衰败，邦国、诸侯，纷纷叛离。夏朝也从此，走上了末路。
 
+## 参考文献
 
->  部分资料来自网络，如侵犯您的权益，请联系我删除！
+> 《》 
+
+> 《史记》 西汉 司马迁 
+
+> 《资治通鉴》 宋 司马光
+
+> 《纲鉴易知录 》清代 吴乘权
+
+> 《纲鉴合编》 王凤洲 袁了凡
