--- a/_posts/2022-12-30-咪咕MGV3200研究.md
+++ b/_posts/2022-12-30-咪咕MGV3200研究.md
@@ -213,3 +213,33 @@ adb.jpg
 刷机完成后盒子会自动重启，优化系统程序完成启动到主界面会自动安装应用市场，
 自己手上有什么好用的电视app可以放在优盘的YueMe_BOX文件夹
 插入优盘开机后系统会自动帮你安装好；
+
+
+## 通过ADB修改DNS
+
+> adb connect 192.168.0.222
+
+> adb root
+
+>  有时候会输出restarting adbd as rooting
+
+> adb root 有时会输出 restarting adbd as root，有的时候什么也没有提示，这个时候通过adb shell进入shell命令行，查看命令提示符是否变成#
+
+> 有些设备root后也无法通过adb root命令让adbd以root权限执行，adb root会输出adbd cannot run as root in production builds，此时可以先安装adbd insecure，然后再尝试
+
+添加DNS服务器地址到盒子里，杭州电信的DNS是202.101.172.35
+202.101.172.46
+202.101.172.47
+所在地的dns服务器地址自己查询
+10.0.0.139是我路由器的IP地址
+查看DNS服务器的命令是 adb shell 后
+输入 getprop |grep dns
+修改DNS服务器的命令是
+setprop
+例如：setprop net.dns3 xx.xx.xx.xx
+最后修改成下面的地址就行。没改动的地址可以保留我就添加了3条，2条是电信的DNS，一条是路由器IP地址
+
+> 恢复adbd为非root权限 命令：adb unroot
+
+
+>  可以参考：https://www.yisu.com/zixun/203183.html
