--- a/_posts/2022-03-03-中华简史自叙.md
+++ b/_posts/2022-03-03-中华简史自叙.md
@@ -1,9 +1,11 @@
 ---
 layout: post
 title: 中华简史自叙 
-description: 中华简史自叙
+description: 中华简史自叙 和 后记
 date: 2022-03-03 05:01:01
 ---
+
+## 自叙
 
 > 中国拥有灿烂的数千年历史，有人说五千年，予以为远不止，中华民族的历史远远超过五千年。
 
@@ -18,3 +20,13 @@ date: 2022-03-03 05:01:01
 > 予以为一定要把中国古代的纪年和公元纪年相结合。以时间为主线进行叙事。
 
 > 叙事以历史重大事件，影响中华文明的重大事件和人物，详略得当，对于特别重大的则详细叙述。对于其他的简单叙述。
+
+<ht/>
+
+## 后记
+
+> 我们中国历史上发生过许多次的改革，虽然少部分短期内取得了一些成效，但是长远来看都是失败的。这是什么原因呢？我仔细分析过，这个就是体制的问题，如果一个系统的总体结构有问题，那么改革如果不能打破这个体制，那么自然最终都会失败。因为体制内的会拼命阻碍破坏你对体制的变革。一旦短期内取得成效那么新的体制中又必然产生新的问题，这时候大部分会导致变法和改革的失败。王安石变化，戊戌变法都是这样。并且也有系统之外（除体制内和体系外之外）外的东西导致你的体制破坏，例如中国几千年的帝制，在西方工业革命下，迅速被打破，土崩瓦解。
+
+> 有时候到了改革后期，改革派却组织了社会的自我进化。
+
+> 很显然，如果一个体制有问题，那么无论你中间怎么变革，只能缓解一时的矛盾。体制的好坏决定了这个体制存在的时间。周行封建设礼仪，可以存八百年之久。而后代王朝却因为集权值多不过三百年，少则几年，几十年就破坏。
