--- a/_posts/2022-12-30-咪咕MGV3000研究 .md
+++ b/_posts/2022-12-30-咪咕MGV3000研究 .md
@@ -5,41 +5,47 @@ description: 咪咕MGV3000研究
 date: 2022-12-30 12:01:01
 ---
 
+> 暫時沒有找到開啓ADB的方法
 
-暫時沒有找到開啓ADB的方法
+> https://www.znds.com/tv-1222451-1-1.html
 
-https://www.znds.com/tv-1222451-1-1.html
+> 江苏咪咕电视盒子刷机这个教程大家都比较需要，本次楼主带来了江苏咪咕MGV3000_YST代工_S905L3_线刷固件包，文中附固件下载链接，有需要的千万不要错过了。
 
-江苏咪咕电视盒子刷机这个教程大家都比较需要，本次楼主带来了江苏咪咕MGV3000_YST代工_S905L3_线刷固件包，文中附固件下载链接，有需要的千万不要错过了。
+### 刷机教程：
 
+> 1、准备好一根双公头USB线刷刷机线，长度30-50CM长度最佳，同时准备一台电脑，拆开盒子；
 
+> 2、电脑上安装好刷机工具Amlogic USB Burning Tool v2.1.6软件→打开软件→文件→导入烧录包→把【擦除flash】和【擦除bootloader】两项勾选→点击【开始】；
 
+> 3、盒子接电源线→电源关闭→把USB线一端插上盒子→保持短接→USB另一端插上电脑→通电开机。
 
-一、教程：
-1、准备好一根双公头USB线刷刷机线，长度30-50CM长度最佳，同时准备一台电脑，拆开盒子；
+> 就可以看到进度条在跑了（此时松开短接），耐心等待进度条跑完；等待提示成功字样后，关闭电源，拔掉刷机线，把机顶盒接上电视机，通电开机，首次开机稍微会有点慢，耐心等待初始化完成即可。
 
-2、电脑上安装好刷机工具Amlogic USB Burning Tool v2.1.6软件→打开软件→文件→导入烧录包→把【擦除flash】和【擦除bootloader】两项勾选→点击【开始】；
+> 江苏咪咕MGV3000_YST代工_S905L3_线刷固件包
 
-3、盒子接电源线→电源关闭→把USB线一端插上盒子→保持短接→USB另一端插上电脑→通电开机。
+### 固件下载链接：
 
-就可以看到进度条在跑了（此时松开短接），耐心等待进度条跑完；等待提示成功字样后，关闭电源，拔掉刷机线，把机顶盒接上电视机，通电开机，首次开机稍微会有点慢，耐心等待初始化完成即可。
+> 链接: https://pan.baidu.com/s/104NHWG0t_33yjy3FCSg78Q 提取码:imuq
 
-江苏咪咕MGV3000_YST代工_S905L3_线刷固件包
+> MGV3000_CJZM_线刷.img.zip 已经转存
 
-江苏咪咕MGV3000_YST代工_S905L3_线刷固件包
+> https://www.znds.com/tv-1222182-1-1.html
 
+> 其它固件大全 https://www.znds.com/tv-1181374-1-1.html
 
+### DiskInitial命令出错 问题解决
 
-
-固件下载链接：
-链接: https://pan.baidu.com/s/104NHWG0t_33yjy3FCSg78Q
-提取码:
-imuq
-
-MGV3000_CJZM_线刷.img.zip 已经转存
-
-https://www.znds.com/tv-1222182-1-1.html
+> 打开烧录软件；2、导入烧录包；3、去掉“擦除”两个对号，4、点击开始。5、机顶盒连接电源；6、机顶盒连接双公头USB；7、（最关键）立即使用牙签等按住机顶盒复位按钮（不同机顶盒复位按钮位置不一样，大多在AV孔内），中途不能松手，直至刷机完
 
 
-其它固件大全
-https://www.znds.com/tv-1181374-1-1.html
+### hdmi短接器厂家给的意见
+
+刷机百分几错程原因1
+首先说明：连接成功后，刷机时出现的错程和短接没任何关系
+1：固件不对应型号或对应代工厂版本
+2：刷机软件版本不对应，28NM S905用2.2之前版本，12NM S905L3A用2.2版本，不要使用过老或过新版本
+3：刷机线不是USB2.0多股铜也会不识别，刷机线不能用USB3.0。3.0都会弱化2.0，也不能使用过长的线，线过长会不稳定
+
+刷机百分几错程原因2
+4：主机使用前面的USB口因为供电不足，要使用后面USB口，有USB2.0就尽量使用2.0，没有就用原生3.0，非原生3.0也不稳定
+5: 盒子一定要接电源，不接电源能识别，但刷写过程容易出错误
