--- a/_posts/2022-12-30-咪咕MGV3000研究 .md
+++ b/_posts/2022-12-30-咪咕MGV3000研究 .md
@@ -35,7 +35,22 @@ date: 2022-12-30 12:01:01
 
 ### DiskInitial命令出错 问题解决
 
-> 打开烧录软件；2、导入烧录包；3、去掉“擦除”两个对号，4、点击开始。5、机顶盒连接电源；6、机顶盒连接双公头USB；7、（最关键）立即使用牙签等按住机顶盒复位按钮（不同机顶盒复位按钮位置不一样，大多在AV孔内），中途不能松手，直至刷机完
+> 方法1(无效)： 打开烧录软件；2、导入烧录包；3、去掉“擦除”两个对号，4、点击开始。5、机顶盒连接电源；6、机顶盒连接双公头USB；7、（最关键）立即使用牙签等按住机顶盒复位按钮（不同机顶盒复位按钮位置不一样，大多在AV孔内），中途不能松手，直至刷机完
+
+> 方法2(未试)： 7%有个办法，就是 先打开软件，短接识别盒子，然后在选择刷机包，点开始，松开短接，有一定几率过7%
+
+> 方法3(未试)： 刷YS（M）的包，可能之前的故件是错的
+
+
+> 以下方法都未试：
+
+```
+第一种方法：先短接，再连数据线，让刷机软件能识别，，松开短接，选好固件，开刷。
+第二种方法：先短接，再连数据线，让刷机软件能识别，，松开短接，选好固件，开刷。出现错误，再短接，拔出电脑端，usb线口再插上。电脑会显示刷机，就松开短接。
+
+第三种方法：先短接，再连数据线，让刷机软件能识别，，不松开短接，选好固件，开刷。
+第四种方法：先短接，再连数据线，让刷机软件能识别，，不松开短接，选好固件，开刷。出现错误，拔出电脑端，usb线口再插上。电脑会显示刷机，就松开短接。
+```
 
 
 ### hdmi短接器厂家给的意见
@@ -49,3 +64,4 @@ date: 2022-12-30 12:01:01
 刷机百分几错程原因2
 4：主机使用前面的USB口因为供电不足，要使用后面USB口，有USB2.0就尽量使用2.0，没有就用原生3.0，非原生3.0也不稳定
 5: 盒子一定要接电源，不接电源能识别，但刷写过程容易出错误
+
