--- a/_posts/2023-01-01-纪事2023.md
+++ b/_posts/2023-01-01-纪事2023.md
@@ -28,3 +28,9 @@ description: 2023年已经到了，放下过去的包袱，努力前行。
 ### 2023-01-06
 
 > 蒙古人当年为了防汉人造反，于是大量收缴民间铁器。汉人老百姓连做饭用的菜刀也得几家人合用，统一管理，结果没多少年蒙古人就被赶出了中原。大禹治水的故事告诉我们，堵不如疏，然而有些人却不懂。现在我们治理翻墙软件太过了，结果导致许多正常的技术网站都被禁，然后这些技术人员发明了许多科学爱国的工具！
+
+### 2023-01-10
+
+> 文学基本上都是以描写小人物为主，为小人物发声。并且多接露社会的阴暗面，所以很难被当局接受。
+
+> 有些儿女在外面装模作样，看着像个正派人，但是父母却住在简陋甚至破烂的房子里等死。然后父母去世的时候却假装哀思，大操大办，这样的人在我们现实社会中不是很多吗？
