--- a/_posts/2023-01-09-西府宝鸡地区的葬礼.md
+++ b/_posts/2023-01-09-西府宝鸡地区的葬礼.md
@@ -53,6 +53,8 @@ date: 2023-01-09 14:44:44
 
 > 奠礼当天下午，子孙拿着献祭品前去祖坟挨着祭奠烧纸。大概是通告祖先，后代有人来了，大家照应着点，顺便也就把逝者的排位迎了回来。
 
+> 老人去世了奠礼当晚还得播电影给大家看，这个也是我小时候的一大乐事，小时候看电影基本就靠有人去世了。当然了现在似乎已经没有这个习俗了，似乎大家对电影也不感兴趣了。
+
 ### 下葬
 
 > 当前早上简单吊唁以下，棺材装上灵车，就准备出发了。亲朋在门口短暂作个告别仪式就可以出发了。
