Update and rename 2023-01-13-M401a挖转Coreelec.md to 2023-01-13-M401a玩转Coreelec.md

--- a/_posts/2023-01-13-M401a玩转Coreelec.md
+++ b/_posts/2023-01-13-M401a玩转Coreelec.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: 魔百盒M401a挖转Coreelec
-description: 魔百盒M401a挖转Coreelec S905L3a芯片的盒子类似
+title: 魔百盒M401a玩转Coreelec
+description: 魔百盒M401a玩转Coreelec S905L3a芯片的盒子类似
 date: 2023-01-13 09:01:01
 ---
 
