--- a/_posts/2023-01-09-回忆我的祖父.md
+++ b/_posts/2023-01-09-回忆我的祖父.md
@@ -5,7 +5,7 @@ description: 回忆我的祖父
 date: 2023-01-09 16:06:06
 ---
 
-> 我的祖父是个地道的农民，共八个子女。祖母去世的比较早，在我出生前已去世多年。在我很小的时候祖父便去世了，但是那时候的一些印象却挥之不去，家中也有一张祖父省钱的照片。
+> 我的祖父是个地道的农民，共八个子女。当然了，据说我曾祖也是小地主，家中颇有些土地，后来因为众所周知的原因，家里地没了，成了穷苦农民，也就是从我祖父这辈起。当然了，祖父早年可能也过了一些好日子吧，因此很早就不参加劳动了，祖屋有一处土墙，早晨阳光很好，我祖父一大早就坐在老屋的土墙边晒太阳，任凭什么大动静也不能影响到祖父的雅兴。祖母去世的比较早，在我出生前已去世多年。在我很小的时候祖父便去世了，但是那时候的一些印象却挥之不去，家中也有一张祖父省钱的照片。
 
 > 这张照片上祖父表情凝重，似乎不很情缘配合拍照。坐在一个破旧的木凳上，背景是老屋的土墙。祖父那全部变白的头发上戴黑色旧布帽，满脸的皱纹长满了消瘦的脸上，高高的鼻梁上戴着一副石头眼镜。上身批着一件黑大棉袄，穿了估计有几十年了，毛领子倒是看起来很暖和的样子，因此这张照片应该是某个冬天拍摄。外面的棉袍和里边的棉衣已经又破又旧的，腿上的裤子也是十分破旧了，也许这张照片是刚劳动完拍的吧，但是至少说明祖父连个像样的衣服估计都没有。右手拿着烟斗，照片虽不清晰，但也能看得出来那双手是经过长期劳动，饱经风霜，已经结了厚厚的茧子。右手上拿一个木杆的烟斗。对这件大棉袄的印象我到现在都挥之不去。
 
