--- a/_posts/2023-01-09-西府宝鸡地区的葬礼.md
+++ b/_posts/2023-01-09-西府宝鸡地区的葬礼.md
@@ -15,6 +15,10 @@ date: 2023-01-09 14:44:44
 
 > 家人需要小敛，就是清理下遗体，穿好寿衣。然后安置在一个方便亲朋调研的位置。
 
+> 麻冠 腰间系麻 柳棍 孝服 被面 白色漏线头 等这些丧父就需要准备了，尤其重要的是 曾孙辈却是金黄色的孝服和帽子
+
+> 柳棍因孝子悲伤虚弱因此支撑
+
 > 简单设置好灵堂，中间有个纸作的灵堂，备好火盆供大家烧纸吊唁。
 
 > 找人写讣文，七单，丧联等。七单主要上面些的日期 头七，二七，三七，四七，五七，六七，终期，百日。讣文内容主要就是逝者一些生前的简介，以及去世日期等，会附带上子孙辈的姓名等。
@@ -23,7 +27,9 @@ date: 2023-01-09 14:44:44
 
 > 棺材 柏枝 炕灰铺地准备盛殓
 
-> 柳棍，麻冠（女不需要），丧服（男女不同，女性穿的丧父连帽，帽子尖尖的，所以本地人叫“顶尖尖”）等，
+> 柳棍，麻冠（女不需要），丧服（男女不同，女性穿的丧父连帽，帽子尖尖的，所以本地人叫“顶尖尖”）等
+
+> 儿女亲戚还得准备 花圈，献祭馍，铭旌等，金山银山，童男女泥人，各种丧葬的褥子被子。
 
 > 亲朋就要开始准备丧葬的被褥等，以及奠礼用的祭品（主要是花馍，花圈，纸品等）
 
@@ -43,6 +49,8 @@ date: 2023-01-09 14:44:44
 
 > 一般在第三天
 
+> 棺材底部要放炕灰，侧柏枝条等，然后才开始铺褥子。
+
 > 这时候要铺设好棺材里边的被褥，有说法是铺金盖银，褥子要金黄色的，被子要白色的，枕头也颇有讲究。
 
 > 把尸体进行安置妥当后就要，这时候就要把尸体盛殓到棺材中，找专门的人来钉上棺盖，也就是民间所说盖棺定论了。
@@ -55,6 +63,26 @@ date: 2023-01-09 14:44:44
 
 > 老人去世了奠礼当晚还得播电影给大家看，这个也是我小时候的一大乐事，小时候看电影基本就靠有人去世了。当然了现在似乎已经没有这个习俗了，似乎大家对电影也不感兴趣了。
 
+> 起棺之前亲戚朋友可以来烧纸送葬，孝子孙们分跪灵堂两旁，随着烧纸人磕头，人家磕头完毕举起柳棍轻拿轻放，表示感谢。当然，这个有专门的人在旁引导。
+
+> 奠礼当天一般会安排宴席，但是这几年好多地方已经把规矩改了，当天只吃面，也就是只喝汤，第二天早上送葬回来才坐席。
+
+### 迎排位
+
+> 这个通常在送葬前天下午进行。
+
+> 迎排位 其实就是告知已经下葬的祖辈，后世有人又下来了。主要就是挨着去各个祖坟烧香，当然了还得带上铭旌。 回来回家 转三圈 再出来转三圈 三次
+
+### 起草
+
+> 这也是个神秘的活动，孝子孙们衣角卷些柴草，然后出发，去村口放下，专人烧香烧纸。然后队伍绕行三圈（逆时针），直接回家，但是值得注意的是回家路上无论什么情况，都不能说话。这个活动很神秘，这么些年我也是颇为不理解。
+
+### 起棺送葬
+
+> 早上 门口布置好 家人开始按辈分顺序烧纸
+
+> 孝子孝孙拉灵车 下葬后孝子孙们先在村口等着帮忙的人行李感谢。
+
 ### 下葬
 
 > 当前早上简单吊唁以下，棺材装上灵车，就准备出发了。亲朋在门口短暂作个告别仪式就可以出发了。
@@ -62,6 +90,8 @@ date: 2023-01-09 14:44:44
 > 到了后烧纸，棺材下到墓里，封上墓堂，亲朋邻居铲土填埋，并攒上坟头。现在这个也成了象征性的了，亲朋象征下的铲几下土，大部分都是挖掘机回填，最后人工把坟头抹平就可以了。最后把花圈都插上坟头。
 
 > 亲属队伍烧完纸会提前往回走，在邻村的队伍等送葬的队伍经过，跪在路边，送葬者经过的时候磕头以表示感谢！
+
+> 回家后还要进门时磕头 对着土地磕头 对着灵堂磕头
 
 ### 后七
 
@@ -72,6 +102,8 @@ date: 2023-01-09 14:44:44
 > 百日满后就可以把祭堂的纸堂烧掉了。
 
 ### 后记
+
+> 葬就是藏的意思，人去世后外表会变得难看，因此需要藏起来。周人把丧葬仪式搞得异常复杂，这大概源于周人起于农业，早期人口较少，需要一些团结族人的活动。丧葬，嫁娶等自然成为了重要的活动。通过这些仪式，让族人不断加强团结。
 
 > 西府的丧葬也是很复杂的，其实就是中国人的孝道的体现，但是我们不能把孝全部放到老人去世后，应该多在老人生前尽孝。
 
