--- a/_posts/2023-01-17-西游记.md
+++ b/_posts/2023-01-17-西游记.md
@@ -5,6 +5,107 @@ description: 读吴承恩《西游记》札记
 date: 2023-01-17 11:30:01
 ---
 
+- [第1章 灵根育孕源流出 心性修持大道生](#第1章-灵根育孕源流出-心性修持大道生)
+- [第2章 悟彻菩提真妙理 断魔归本合元神](#第2章-悟彻菩提真妙理-断魔归本合元神)
+- [第3章 四海千山皆拱伏 九幽十类尽除名](#第3章-四海千山皆拱伏-九幽十类尽除名)
+- [第4章 官封弼马心何足 名注齐天意未宁](#第4章-官封弼马心何足-名注齐天意未宁)
+- [第5章 乱蟠桃大圣偷丹 反天宫诸神捉怪](#第5章-乱蟠桃大圣偷丹-反天宫诸神捉怪)
+- [第6章 观音赴会问原因 小圣施威降大圣](#第6章-观音赴会问原因-小圣施威降大圣)
+- [第7章 八卦炉中逃大圣 五行山下定心猿](#第7章-八卦炉中逃大圣-五行山下定心猿)
+- [第8章 我佛造经传极乐 观音奉旨上长安](#第8章-我佛造经传极乐-观音奉旨上长安)
+- [第9章 袁守诚妙算无私曲 老龙王拙计犯天条](#第9章-袁守诚妙算无私曲-老龙王拙计犯天条)
+- [第10章 二将军宫门镇鬼 唐太宗地府还魂](#第10章-二将军宫门镇鬼-唐太宗地府还魂)
+- [第11章 还受生唐王遵善果 度孤魂萧瑀正空门](#第11章-还受生唐王遵善果-度孤魂萧瑀正空门)
+- [第12章 玄奘秉诚建大会 观音显象化金蝉](#第12章-玄奘秉诚建大会-观音显象化金蝉)
+- [第13章 陷虎穴金星解厄 双叉岭伯钦留僧](#第13章-陷虎穴金星解厄-双叉岭伯钦留僧)
+- [第14章 心猿归正 六贼无踪](#第14章-心猿归正-六贼无踪)
+- [第15章 蛇盘山诸神暗佑 鹰愁涧意马收缰](#第15章-蛇盘山诸神暗佑-鹰愁涧意马收缰)
+- [第16章 观音院僧谋宝贝 黑风山怪窃袈裟](#第16章-观音院僧谋宝贝-黑风山怪窃袈裟)
+- [第17章 孙行者大闹黑风山 观世音收伏熊罴怪](#第17章-孙行者大闹黑风山-观世音收伏熊罴怪)
+- [第18章 观音院唐僧脱难 高老庄行者降魔](#第18章-观音院唐僧脱难-高老庄行者降魔)
+- [第19章 云栈洞悟空收八戒 浮屠山玄奘受心经](#第19章-云栈洞悟空收八戒-浮屠山玄奘受心经)
+- [第20章 黄风岭唐僧有难 半山中八戒争先](#第20章-黄风岭唐僧有难-半山中八戒争先)
+- [第21章 护法设庄留大圣 须弥灵吉定风魔](#第21章-护法设庄留大圣-须弥灵吉定风魔)
+- [第22章 八戒大战流沙河 木叉奉法收悟净](#第22章-八戒大战流沙河-木叉奉法收悟净)
+- [第23章 三藏不忘本 四圣试禅心](#第23章-三藏不忘本-四圣试禅心)
+- [第24章 万寿山大仙留故友 五庄观行者窃人参](#第24章-万寿山大仙留故友-五庄观行者窃人参)
+- [第25章 镇元仙赶捉取经僧 孙行者大闹五庄观](#第25章-镇元仙赶捉取经僧-孙行者大闹五庄观)
+- [第26章 孙悟空三岛求方 观世音甘泉活树](#第26章-孙悟空三岛求方-观世音甘泉活树)
+- [第27章 尸魔三戏唐三藏 圣僧恨逐美猴王](#第27章-尸魔三戏唐三藏-圣僧恨逐美猴王)
+- [第28章 花果山群妖聚义 黑松林三藏逢魔](#第28章-花果山群妖聚义-黑松林三藏逢魔)
+- [第29章 脱难江流来国土 承恩八戒转山林](#第29章-脱难江流来国土-承恩八戒转山林)
+- [第30章 邪魔侵正法 意马忆心猿](#第30章-邪魔侵正法-意马忆心猿)
+- [第31章 猪八戒义激猴王 孙行者智降妖怪](#第31章-猪八戒义激猴王-孙行者智降妖怪)
+- [第32章 平顶山功曹传信 莲花洞木母逢灾](#第32章-平顶山功曹传信-莲花洞木母逢灾)
+- [第33章 外道迷真性 元神助本心](#第33章-外道迷真性-元神助本心)
+- [第34章 魔王巧算困心猿 大圣腾那骗宝贝](#第34章-魔王巧算困心猿-大圣腾那骗宝贝)
+- [第35章 外道施威欺正性 心猿获宝伏邪魔](#第35章-外道施威欺正性-心猿获宝伏邪魔)
+- [第36章 心猿正处诸缘伏 劈破旁门见月明](#第36章-心猿正处诸缘伏-劈破旁门见月明)
+- [第37章 鬼王夜谒唐三藏 悟空神化引婴儿](#第37章-鬼王夜谒唐三藏-悟空神化引婴儿)
+- [第38章 婴儿问母知邪正 金木参玄见假真](#第38章-婴儿问母知邪正-金木参玄见假真)
+- [第39章 一粒金丹天上得 三年故主世间生](#第39章-一粒金丹天上得-三年故主世间生)
+- [第40章 婴儿戏化禅心乱 猿马刀归木母空](#第40章-婴儿戏化禅心乱-猿马刀归木母空)
+- [第41章 心猿遭火败 木母被魔擒](#第41章-心猿遭火败-木母被魔擒)
+- [第42章 大圣殷勤拜南海 观音慈善缚红孩](#第42章-大圣殷勤拜南海-观音慈善缚红孩)
+- [第43章 黑河妖孽擒僧去 西洋龙子捉鼍回](#第43章-黑河妖孽擒僧去-西洋龙子捉鼍回)
+- [第44章 法身元运逢车力 心正妖邪度脊关](#第44章-法身元运逢车力-心正妖邪度脊关)
+- [第45章 三清观大圣留名 车迟国猴王显法](#第45章-三清观大圣留名-车迟国猴王显法)
+- [第46章 外道弄强欺正法 心猿显圣灭诸邪](#第46章-外道弄强欺正法-心猿显圣灭诸邪)
+- [第47章 圣僧夜阻通天水 金木垂慈救小童](#第47章-圣僧夜阻通天水-金木垂慈救小童)
+- [第48章 魔弄寒风飘大雪 僧思拜佛履层冰](#第48章-魔弄寒风飘大雪-僧思拜佛履层冰)
+- [第49章 三藏有灾沉水宅 观音救难现鱼篮](#第49章-三藏有灾沉水宅-观音救难现鱼篮)
+- [第50章 情乱性从因爱欲 神昏心动遇魔头](#第50章-情乱性从因爱欲-神昏心动遇魔头)
+- [第51章 心猿空用千般计 水火无功难炼魔](#第51章-心猿空用千般计-水火无功难炼魔)
+- [第52章 悟空大闹金山兜洞 如来暗示主人公](#第52章-悟空大闹金山兜洞-如来暗示主人公)
+- [第53章 禅主吞餐怀鬼孕 黄婆运水解邪胎](#第53章-禅主吞餐怀鬼孕-黄婆运水解邪胎)
+- [第54章 法性西来逢女国 心猿定计脱烟花](#第54章-法性西来逢女国-心猿定计脱烟花)
+- [第55章 色邪淫戏唐三藏 性正修持不坏身](#第55章-色邪淫戏唐三藏-性正修持不坏身)
+- [第56章 神狂诛草寇 道昧放心猿](#第56章-神狂诛草寇-道昧放心猿)
+- [第57章 真行者落伽山诉苦 假猴王水帘洞誊文](#第57章-真行者落伽山诉苦-假猴王水帘洞誊文)
+- [第58章 二心搅乱大乾坤 一体难修真寂灭](#第58章-二心搅乱大乾坤-一体难修真寂灭)
+- [第59章 唐三藏路阻火焰山 孙行者一调芭蕉扇](#第59章-唐三藏路阻火焰山-孙行者一调芭蕉扇)
+- [第60章 牛魔王罢战赴华筵 孙行者二调芭蕉扇](#第60章-牛魔王罢战赴华筵-孙行者二调芭蕉扇)
+- [第61章 猪八戒助力败魔王 孙行者三调芭蕉扇](#第61章-猪八戒助力败魔王-孙行者三调芭蕉扇)
+- [第62章 涤垢洗心惟扫塔 缚魔归正乃修身](#第62章-涤垢洗心惟扫塔-缚魔归正乃修身)
+- [第63章 二僧荡怪闹龙宫 群圣除邪获宝贝](#第63章-二僧荡怪闹龙宫-群圣除邪获宝贝)
+- [第64章 荆棘岭悟能努力 木仙庵三藏谈诗](#第64章-荆棘岭悟能努力-木仙庵三藏谈诗)
+- [第65章 妖邪假设小雷音 四众皆遭大厄难](#第65章-妖邪假设小雷音-四众皆遭大厄难)
+- [第66章 诸神遭毒手 弥勒缚妖魔](#第66章-诸神遭毒手-弥勒缚妖魔)
+- [第67章 拯救驼罗禅性稳 脱离秽污道心清](#第67章-拯救驼罗禅性稳-脱离秽污道心清)
+- [第68章 朱紫国唐僧论前 世孙行者施为三折肱](#第68章-朱紫国唐僧论前-世孙行者施为三折肱)
+- [第69章 心主夜间修药物 君王筵上论妖邪](#第69章-心主夜间修药物-君王筵上论妖邪)
+- [第70章 妖魔宝放烟沙火 悟空计盗紫金铃](#第70章-妖魔宝放烟沙火-悟空计盗紫金铃)
+- [第71章 行者假名降怪犼 观音现象伏妖王](#第71章-行者假名降怪犼-观音现象伏妖王)
+- [第72章 盘丝洞七情迷本 濯垢泉八戒忘形](#第72章-盘丝洞七情迷本-濯垢泉八戒忘形)
+- [第73章 情因旧恨生灾毒 心主遭魔幸破光](#第73章-情因旧恨生灾毒-心主遭魔幸破光)
+- [第74章 长庚传报魔头狠 行者施为变化能](#第74章-长庚传报魔头狠-行者施为变化能)
+- [第75章 心猿钻透阴阳窍 魔王还归大道真](#第75章-心猿钻透阴阳窍-魔王还归大道真)
+- [第76章 心神居舍魔归性 木母同降怪体真](#第76章-心神居舍魔归性-木母同降怪体真)
+- [第77章 群魔欺本性 一体拜真如](#第77章-群魔欺本性-一体拜真如)
+- [第78章 比丘怜子遣阴神 金殿识魔谈道德](#第78章-比丘怜子遣阴神-金殿识魔谈道德)
+- [第79章 寻洞擒妖逢老寿 当朝正主救婴儿](#第79章-寻洞擒妖逢老寿-当朝正主救婴儿)
+- [第80章 姹女育阳求配偶 心猿护主识妖邪](#第80章-姹女育阳求配偶-心猿护主识妖邪)
+- [第81章 镇海寺心猿知怪 黑松林三众寻师](#第81章-镇海寺心猿知怪-黑松林三众寻师)
+- [第82章 姹女求阳 元神护道](#第82章-姹女求阳-元神护道)
+- [第83章 心猿识得丹头 姹女还归本性](#第83章-心猿识得丹头-姹女还归本性)
+- [第84章 难灭伽持圆大觉 法王成正体天然](#第84章-难灭伽持圆大觉-法王成正体天然)
+- [第85章 心猿妒木母 魔主计吞禅](#第85章-心猿妒木母-魔主计吞禅)
+- [第86章 木母助威征怪物 金公施法灭妖邪](#第86章-木母助威征怪物-金公施法灭妖邪)
+- [第87章 凤仙郡冒天止雨 孙大圣劝善施霖](#第87章-凤仙郡冒天止雨-孙大圣劝善施霖)
+- [第88章 禅到玉华施法会 心猿木母授门人](#第88章-禅到玉华施法会-心猿木母授门人)
+- [第89章 黄狮精虚设钉钯宴 金木土计闹豹头山](#第89章-黄狮精虚设钉钯宴-金木土计闹豹头山)
+- [第90章 师狮授受同归一 盗道缠禅静九灵山](#第90章-师狮授受同归一-盗道缠禅静九灵山)
+- [第91章 金平府元夜观灯 玄英洞唐僧供状](#第91章-金平府元夜观灯-玄英洞唐僧供状)
+- [第92章 三僧大战青龙山 四星挟捉犀牛怪](#第92章-三僧大战青龙山-四星挟捉犀牛怪)
+- [第93章 给孤园问古谈因 天竺国朝王遇偶](#第93章-给孤园问古谈因-天竺国朝王遇偶)
+- [第94章 四僧宴乐御花园 一怪空怀情欲喜](#第94章-四僧宴乐御花园-一怪空怀情欲喜)
+- [第95章 假合真形擒玉兔 真阴归正会灵元](#第95章-假合真形擒玉兔-真阴归正会灵元)
+- [第96章 寇员外喜待高僧 唐长老不贪富贵](#第96章-寇员外喜待高僧-唐长老不贪富贵)
+- [第97章 金酬外护遭魔毒 圣显幽魂救本原](#第97章-金酬外护遭魔毒-圣显幽魂救本原)
+- [第98章 猿熟马驯方脱壳 功成行满见真如](#第98章-猿熟马驯方脱壳-功成行满见真如)
+- [第99章 九九数完魔灭尽 三三行满道归根](#第99章-九九数完魔灭尽-三三行满道归根)
+- [第100章 径回东土 五圣成真](#第100章-径回东土-五圣成真)
+
 ### 第1章 灵根育孕源流出 心性修持大道生
 
     诗曰：
