--- a/_posts/2022-12-27-诗经札记.md
+++ b/_posts/2022-12-27-诗经札记.md
@@ -511,21 +511,32 @@ date: 2022-12-27 11:44:01
 <hr/>
 
 ### 七月
-七月流火①，九月授衣②。春日载阳③，有鸣仓庚④。女执懿筐⑤，遵彼微行⑥，爰求柔桑⑦。春日迟迟，采蘩祁祁⑧。女心伤悲，殆及公子同归⑨。
-①流：向下行。火：星名，亦称“大火”。每年夏历六月此星出现于正南方，位置 高，七月以后就偏西向下，所以称“流火”。
-②授衣：把裁制冬衣的差事分配给妇女。
-③载：开始。阳：暖和。
-④仓庚：黄莺。
-⑤懿（yì）筐：深筐。
-⑥遵：沿着。微行：小路。
-⑦爰（yuán）：于是。柔桑：嫩桑叶。
-⑧蘩（fán）：白蒿。祁祁（qí）：很多的样子。
-⑨殆（dài）：怕。
-> 七月火星偏西方，九月叫人缝衣裳。春天的太阳暖洋洋，黄莺儿枝头把歌唱。姑娘提着深竹筐，沿着小路采摘忙，专采那些柔嫩桑。春日的白天真是长，采来的蒿叶一筐筐。采蒿姑娘心悲伤，怕那公子把我抢。
-七月在野，八月在宇，九月在户，十月蟋蟀入我床下。
+
+> 七月流火，九月授衣。一之日觱发，二之日栗烈。无衣无褐，何以卒岁。三之日于耜，四之日举趾。同我妇子，馌彼南亩，田畯至喜。
+>> ①流：向下行。火：星名，亦称“大火”。每年夏历六月此星出现于正南方，位置 高，七月以后就偏西向下，所以称“流火”。②授衣：把裁制冬衣的差事分配给妇女。③载：开始。阳：暖和。④仓庚：黄莺。⑤懿（yì）筐：深筐。⑥遵：沿着。微行：小路。⑦爰（yuán）：于是。柔桑：嫩桑叶。⑧蘩（fán）：白蒿。祁祁（qí）：很多的样子。⑨殆（dài）：怕。
+
+> 七月流火，九月授衣。春日载阳，有鸣仓庚。女执懿筐，遵彼微行，爰求柔桑。春日迟迟，采蘩祁祁。女心伤悲，殆及公子同归20。
+
+> 七月流火，八月萑苇。蚕月条桑，取彼斧斨，以伐远扬，猗彼女桑。七月鸣鵙，八月载绩。载玄载黄，我朱孔阳，为公子裳。
+
+> 四月秀葽，五月鸣蜩。八月其获，十月陨萚。一之日于貉，取彼狐狸，为公子裘。二之日其同，载缵武功，言私其豵，献豜于公。
+
+> 五月斯螽动股，六月莎鸡振羽，七月在野，八月在宇，九月在户，十月蟋蟀入我床下。穹窒熏鼠，塞向墐户。嗟我妇子，曰为改岁，入此室处。
+
+> 六月食郁及薁，七月亨葵及菽，八月剥枣，十月获稻，为此春酒，以介眉寿。七月食瓜，八月断壶，九月叔苴，采荼薪樗，食我农夫。
+
+> 九月筑场圃，十月纳禾稼。黍稷重穋，禾麻菽麦。嗟我农夫，我稼既同，上入执宫功。昼尔于茅，宵尔索绹。亟其乘屋，其始播百谷。
+
+> 二之日凿冰冲冲，三之日纳于凌阴。四之日其蚤，献羔祭韭。九月肃霜，十月涤场。朋酒斯飨，曰杀羔羊。跻彼公堂64，称彼兕觥，万寿无疆。 
+
 > 七月蟋蟀野外鸣，八月屋檐底下唱，九月进到屋里面，十月来到床下藏。
-鸱鸮
-恩斯勤斯①，鬻子之闵斯②。
+
+>> 七月实在是讲老百姓的幸苦生活，底层人民一年到头忙忙碌碌，却不得空闲无所生活。作者是深深同情老百姓的。因此就内容来看作者应该是贵族，但是不会是那种上层贵族。认为周公之作更不可能。对于当时的生活描写的非常细致，对老百姓的工作也非常清楚。
+
+
+### 鸱鸮
+
+> 恩斯勤斯①，鬻子之闵斯②。
 ①恩斯勤斯：恩，《鲁诗》作“殷”，“恩”与“殷”意同，
 “殷”“勤”在这里有尽心、勤苦之意。斯，语助词。
 ②鬻（yù）子之闵（mǐn）斯：此句意为因抚育小鸟而忧心。鬻，通“育”，养育。闵，忧苦。
@@ -535,6 +546,8 @@ date: 2022-12-27 11:44:01
 ②彻：取。桑土：即“桑杜”，桑根。土，《韩诗》作“杜”。
 ③绸缪（móu）：缠绵，缠绕。这里有修补之意。牖（yǒu）户：窗和门。这里代指鸟窝。
 > 趁着天晴没下雨，赶快剥点桑根皮，把那门窗修补好。
+
+
 ### 东山
 我徂东山①，慆慆不归②。我来自东，零雨其濛③。
 ①徂：去，往。东山：诗中出征者服役的地方。
