--- a/_posts/2023-01-09-西府宝鸡地区的葬礼.md
+++ b/_posts/2023-01-09-西府宝鸡地区的葬礼.md
@@ -9,7 +9,7 @@ date: 2023-01-09 14:44:44
 
 ### 临终
 
-> 一般要把儿女子孙叫到一起安排临终遗言，安排好后事。现在好多子女在外或者去世太急的就安排不了了。所以我们平常要多多和父母沟通。
+> 一般要把儿女子孙叫到一起安排临终遗言，安排好后事，这就叫送终。现在好多子女在外或者去世太急的就安排不了了。所以我们平常要多多和父母沟通。
 
 ### 死亡
 
@@ -23,15 +23,19 @@ date: 2023-01-09 14:44:44
 
 > 找人写讣文，七单，丧联等。七单主要上面些的日期 头七，二七，三七，四七，五七，六七，终期，百日。讣文内容主要就是逝者一些生前的简介，以及去世日期等，会附带上子孙辈的姓名等。
 
+### 关于招魂
+
 ### 准备棺材等丧葬用品
 
-> 棺材 柏枝 炕灰铺地准备盛殓
+> 棺材 柏枝 炕灰铺地准备盛殓。棺材现在普通人家基本都是桐木的，有欠人家也会用柏木等名贵木材，但是不多见。
 
 > 柳棍，麻冠（女不需要），丧服（男女不同，女性穿的丧父连帽，帽子尖尖的，所以本地人叫“顶尖尖”）等
 
 > 儿女亲戚还得准备 花圈，献祭馍，铭旌等，金山银山，童男女泥人，各种丧葬的褥子被子。
 
 > 亲朋就要开始准备丧葬的被褥等，以及奠礼用的祭品（主要是花馍，花圈，纸品等）
+
+> 在盛殓之前一定要防备尸体被猫狗等小动物碰触，据说容易诈尸。
 
 ### 打墓（修墓）
 
@@ -54,6 +58,10 @@ date: 2023-01-09 14:44:44
 > 这时候要铺设好棺材里边的被褥，有说法是铺金盖银，褥子要金黄色的，被子要白色的，枕头也颇有讲究。
 
 > 把尸体进行安置妥当后就要，这时候就要把尸体盛殓到棺材中，找专门的人来钉上棺盖，也就是民间所说盖棺定论了。
+
+> 这时候就需要在门口挂上望门纸，门口张贴讣文。预示死者灵魂要上天去报道了把。望门纸形如筒状,中空,高丈余，在关中农村都能见到。
+
+> 遗体手上要攥一件东西，嘴里也要塞上玉石，铜钱等物件。
 
 ### 奠礼（丧礼）
 
@@ -101,6 +109,14 @@ date: 2023-01-09 14:44:44
 
 > 百日满后就可以把祭堂的纸堂烧掉了。
 
+### 在外异地死亡的情况
+
+> 如因在外发生意外如病死，意外事故这种情况则丧葬情况比较不同。
+
+> 比如迎接遗体回来的时候要带一只老公鸡，叫“祭魂公鸡”回来的时候需要放在遗体边上，一路上要让公鸡不停的鸣叫。回来侯盛殓侯公鸡要放到棺材下面，还必须防止公鸡被猫，黄鼠狼等吃掉，否则不吉祥。下葬的时候也要带上这只公鸡，下葬之后要在坟地把公鸡放生。
+
+> 意外身亡的情况下，遗体灵堂就不能进屋了，很早之前好像记得是遗体都不能进院子，早些年有人就在门口设置灵堂。这些年好多人家都改为在院子里了。如果进屋的话据说对家庭不利。
+
 ### 后记
 
 > 葬就是藏的意思，人去世后外表会变得难看，因此需要藏起来。周人把丧葬仪式搞得异常复杂，这大概源于周人起于农业，早期人口较少，需要一些团结族人的活动。丧葬，嫁娶等自然成为了重要的活动。通过这些仪式，让族人不断加强团结。
@@ -108,3 +124,23 @@ date: 2023-01-09 14:44:44
 > 西府的丧葬也是很复杂的，其实就是中国人的孝道的体现，但是我们不能把孝全部放到老人去世后，应该多在老人生前尽孝。
 
 > 当然随着时代的房展，懂得丧礼仪式的人越来越少，程序也不断简化，当然这跟时代发展有着很大的关系。
+
+> 以下引用自陈仓区政府网站的丧葬习俗
+
+```
+过去，除国家干部职工、城镇居民外，农村均以土葬为主。此后，随着殡葬改革的顺利实施，开始在川原地区的农村推行火葬，并相继建成了殡仪馆、蟠龙陵园、莲花台陵园、玄武山陵园。1998年6月30日，陈仓区将虢镇、阳平镇、杨家沟乡、千河镇、周原镇、慕仪镇重新列为火化区，凡城里去世的人一般安放在了陵园，农村去世的人都安埋在了村民小组划定的公坟内。
+
+一般在老人建在时，儿女们就要操心为老人做好棺木。棺木做好后，亲友还要来祝贺，女婿要给棺材搭红放炮，祝老人健康长寿，名曰“贺寿木”。但普通人家多是临时赶做。死者的棺材，要选质地细腻又耐腐蚀的木材制作，民间以柏木、红松、桐木等为上品，榆木、杨木、柳木次之，杂木则更次之。棺材很讲究，用上等木料精工制作，棺材周围要请画匠画上古时二十四孝或花草，棺头雕上“寿”字，棺的顶部男画龙、女画凤图案。里层用布和胶裱糊，再涂一层生漆，使其严密，滴水不漏，称“布裹漆”，外部用土漆连续油漆多遍，使其乌黑铮亮，现代多用化工涂料油漆。
+
+当老人病危时，男请户族及舅家探视，女请娘家探视。老人弥留之际，与儿女见面作最后决别，吩咐后事，如事业的继承、财产的处理、对子孙为人处世的教导等。子女日夜侍候在侧，直至老人死去，俗称“孝子送终”。老人临终前，要用温水把身体擦洗干净，男者要剃头，女者要洗梳头发，并修剪脚、手指甲，然后把套好的寿衣穿上。死者为男性，通常由儿子和女儿来料理；死者为女性，则由女儿和媳妇来料理。寿衣穿单不穿双，穿绸不穿缎，穿棉不穿皮毛，忌穿黑色，为图吉利。寿衣数量一般为“五领三腰”。即五件上衣，三条裙裤，也有穿七套、九套的。缎子与“断子”谐音，皮毛则为畜类，怕来生变兽或断子绝孙，故忌用。换好寿衣，把老人转移到临时设置的木板床上，头朝里、脚朝外，取意向外走。老人们死后称“走了”、“去世”或称“逝世”。
+
+病人亡后，要给死者脸上盖一张白纸，称为“苫脸纸”；死者胸部放个筛面罗，视为镇物，并严防猫狗接近。还要用布带将死者的遗体捆绑在床上，以防惊尸“发势”。死者手上放根柏树枝，上面穿一块饼子，再以红线系小铜钱一枚，放于死者口内牙齿外，谓之“口含钱”或“压舌钱”。尸体安排停当，孝子就要向亲友报丧，死者是男，首先要给户族及舅家报丧；死者是女，首先要给娘家报丧，接着是给姑家和姨家报丧。报丧时孝子不作揖，以双膝跪地，行叩头礼，并陈述死者的死因、死亡时问及入殓、开吊和出殡日期等。报完丧后，丧主家还要在大门外高悬“望门纸”，称“纸杆”，形如筒状，中空，高丈余，直径二三尺，周围粘上许多长串白纸条，用剪刀剪成连环铜钱状，挂在竿头，栽于门前，并在门外竖“门牌”（即讣闻），用一大张长方形的白纸，写上亡者的姓名、属相、生卒年月日、安葬时间及子孙姓名等，贴在木板上，置于大门外，以示家有重孝。棺材停放在堂屋以门槛为中线的内外各半之处，或直接抬进临时搭好的“灵棚”内，但死者须以布遮面，不能让死者见日光。棺材下面用两条高约二尺的长凳架起，先在棺材底部铺一层锯末或草木灰，垫上柏叶，再铺上子女及亲戚给缝的新褥子。死者的子女按长幼次序排列成行，瞻仰遗容，死者如果是男，须由户族头人检视衣衾，有些地方是由外甥检视；死者如果是女，衣衾则由娘家人检视，如果对棺木、寿衣不满意，是不能入殓的，检视人提出的意见，当事人必须照办。入殓时由长子捧住死者的头，次子提腰，幼子抬脚，将尸体平稳地仰面放入棺材内，盖上新做的红色薄被子。尸体摆放端正后，给死者面部盖张苫脸纸，袖内放一把纸扇，有些地方还要给死者身上放些“等身钱”(一岁放一张纸钱)，棺材内再放些散碎银钱及陈艾，死者尸体周围用灰包填实，直到把尸体固定，在棺内不能移动为止。有的给死者口内放进一些珠宝或铜钱，古称“含玉”，意在祛除秽气，使尸体历久不腐，此即“含殓”。报丧讣告上写的“亲视含殓”，就是表示对死者已经做到养老送终了。
+
+死者入殓后，子女及近亲、户族中的晚辈，在灵前戴孝守丧，称为“成服”。丧服一般是儿子穿对襟白孝褂、白裤、头戴白孝帽，脚穿白鞋，腰柬麻辫，媳妇和女儿摘掉头上的金银首饰，服白色长衫，头戴白孝巾，脚穿白鞋；死者的长辈不戴孝，妻死，夫不戴孝；夫死，则妻要戴孝，有的地方妻只穿白鞋。其余亲戚只戴孝帽，娘舅家的人，不论比死者低多少辈，都戴最轻的孝巾。孝子有事去他人家时，可在门外说话，不进入大门。
+
+安葬，也称埋人，其俗各有不同。人去世后一般跟七埋,也有全五埋的，西部山区还有第三天安埋之俗。在安葬的先一天哭灵祭奠。千河以西过丧事时，亲友都要送纸货，根据与死者的亲疏关系和辈分，所送纸货的轻重也不一样。甥、婿晚辈送金花、银花、亭子、纸人、纸马、纸鹤、铭旌、象蜡、纸俑一对（俗称“童男女”）。后又增加了花圈、挽幛、纸糊汽车、彩电、席梦思床、聚宝盆、香花、摇钱树等。样式繁多、不甚枚举。一般亲友只送纸钱、大纸、花圈、挽幛等。亲戚还要蒸“献祭”（即用上等的白面做成的形似大馍的供品）。嫡、近晚辈要送花“献祭”，在大白馍上插上用面做成的各种面花，还有八仙上寿、十二生肖、五子登科等福寿故事，并且染成彩色。吹鼓手先日上午到达主家后，即在大门口奏乐，待亲友来临时，吹奏迎至灵堂前祭奠。下午，又将亲友所送祭品按辈分依次端出大门，吹手跟随伴奏，孝子相随，至设的祭桌前，行祭奠礼后返回，称为“迎祭”。晚上亡人晚辈要依次祭奠，吹鼓手伴奏，主祭者行九叩十八拜礼，还要献乐点三折戏，直闹至天亮，称“烧纸”。安葬之日，虢镇以东（包括周原、慕仪等镇）地区，在天大亮之前就把亡人安埋，千河以西，一般在早饭后7至9点钟按阴阳先生指定的时间起柩发丧。之前，先由长媳去坟墓，用衣襟将墓坑内的新土撩回一些，返回路上见人不说话，回家后将土撒于庭院或倒在灶房水瓮下，叫“撩土”，可消除死者带财之虑。
+
+破盆是葬礼中重要一环。一般由长子长孙破盆，有“子破为瓦盆，孙破为银盆，重孙破为金盆”之说，重孙破盆，还必须在孝服上披红戴花，以示隆重。灵柩送向坟茔时，先由孝子挪动，再用木质“八抬”或十六人抬的“龙杠”将棺材抬往坟茔，后多改为拖拉机拉。由乐队护送，男女孝子拉柳棍在灵前灵后护送，吹打哭泣，一路行进。到坟茔后，由阴阳先生用罗盘定好方位下葬，再由孝子檫拭棺材，并把陪葬物放进，遂即掩埋。
+
+葬归，主家摆宴招待亲友，酬谢宾客。葬礼告终，亲友皆归，唯出嫁女儿需待烧完“哭三纸”方才回自家。此后，家人、亲友还要为亡人做“七期”、“百日”以及一年一度的周年活动。三周年这天中午，男女孝子在坟茔祭奠完毕后，除去孝服，从此表示三年之丧完全结束。
+```
