--- a/_posts/2022-10-20-左传札记.md
+++ b/_posts/2022-10-20-左传札记.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 左传札记序言
+title: 读《左传》札记
 description: 读《左传》札记
 date: 2022-10-20 05:01:01
 ---
@@ -46,7 +46,6 @@ date: 2022-10-20 05:01:01
   - [灭于诸侯联军的诸侯国](#灭于诸侯联军的诸侯国)
 - [春秋笔法](#春秋笔法)
 - [最后更新于2023-01-18 13：01](#最后更新于2023-01-18-1301)
-
 
 ## 序言
 
