--- a/_posts/2020-01-01-西府杂记.md
+++ b/_posts/2020-01-01-西府杂记.md
@@ -492,6 +492,28 @@ date: 2021-05-01 05:01:01
 
 > 以上只是我的猜想，如有错误欢迎大家指正。大家如有更多资料的，还望下吝赐教。
 
+### 西府年俗
+
+> 在关中西府地区，腊八开始其实就算进入过年了。这时候开始就要打扫卫生，蒸包子，不知道这个蒸包子的讲究从什么而来，据我猜测可能是过去生活条件差的时候到年底了杀猪宰你，期盼来年能吃饱饭吧。
+
+> 小年二十三,祭灶，又叫小年。需要烙干粮饼，小时候哪个干粮饼实在太香了，里边加了孜然还有其它香料，并且比较瓷实，特别好吃，现在大部分都是买那种现成的机器饼，发虚，味道也不好吃。
+
+> 腊月三十就是除夕了，中午贴春联，下午上坟 晚上吃年夜饭团圆饭 ，当然了如果兄弟分家的还要端上盘子去老人所在的房子聚餐，有些人家还要在各个兄弟家吃一遍，吃完年夜饭还要集体包饺子。从这天开始鞭炮上就逐渐响起。
+
+> 初一早上起来先下个饺子吃，然后出去游玩 。
+
+> 早上一三五放炮 过去春节期间打秋千，社火等
+
+> 从正月初二开始就要去舅舅家给舅舅拜年了。礼品主要是水晶饼等。这个要是在过去还要给舅舅家蒸馒头，到了舅舅家，舅舅还得先给外甥下个汤，也就是吃个臊子面。当然了这期间给小孩子的压岁钱是不能少的。
+
+> 初五又叫破五，从这天起年就算过完了。这一天一般也是吃饺子或者打搅团吃。
+
+> 我所在地区从初六到正月十三开始各个村子有庙会，这时候就要给自己外甥送灯笼了，一般还要带一捆麻糖（本地的大麻花）。一般在村子庙会的时候其它村的社火队可以去游社火，到了门口都要给社火队放炮，送上一盒礼品或者现金。有些好热闹之人还会邀请社火队去家中院子转一圈，图个吉利。
+
+> 正月十五下午去上坟，给祖坟也要点上灯笼。晚上先吃个元宵，然后就是放烟花，这几年禁放烟花，所以气氛稍逊一些了。
+
+> 过完正月十五便算是真正的春节过完了。
+
 ### 西府周原礼记-婚礼
 
 > 周原作为周秦故里，在许多礼节上面继承了周礼，各种仪式特别讲究。周原的婚礼比较讲究，有感于婚礼逐渐缺失，进行整理，为以后婚礼提供借鉴。
@@ -575,7 +597,7 @@ date: 2021-05-01 05:01:01
 
 #### 死亡
 
-> 家人需要小敛，就是清理下遗体，穿好寿衣。然后安置在一个方便亲朋调研的位置。
+> 家人需要小敛，就是清理下遗体，穿好寿衣，手中还要握上一块玉，嘴里含一块铜钱之类。然后安置在一个方便亲朋吊念的位置。
 
 > 麻冠 腰间系麻 柳棍 孝服 被面 白色漏线头 等这些丧父就需要准备了，尤其重要的是 曾孙辈却是金黄色的孝服和帽子
 
@@ -663,6 +685,8 @@ date: 2021-05-01 05:01:01
 
 > 回家后还要进门时磕头 对着土地磕头 对着灵堂磕头
 
+> 丧事处理完毕之后还要挨家区隔壁家里吹唢呐放炮，我们当地叫敬神，也就是帮助邻居家驱邪。
+
 #### 后七
 
 > 三七内要隔天（单数）上坟，烧纸打怕怕，大概是人刚下葬，环境不熟悉，家人要去给打怕怕。
@@ -670,6 +694,16 @@ date: 2021-05-01 05:01:01
 > 下载后几天要把逝者生前的衣物也烧掉，大概就是给送到下面吧。
 
 > 百日满后就可以把祭堂的纸堂烧掉了。
+
+### 周年
+
+> 女子过来吊唁还得哭着，有人搀扶。
+
+> 每年一次周年，儿女要在周年的时候举行浓重的宴会然后上坟。
+
+> 三周年 换服立碑， 这个是最盛大的了。
+
+> 三周年之前家中过年过节不贴春联或者贴紫色纸的春联。三周年后才可以张贴红色春联。
 
 #### 在外异地死亡的情况
 
