--- a/_posts/2022-12-27-周易札记.md
+++ b/_posts/2022-12-27-周易札记.md
@@ -7,13 +7,21 @@ date: 2022-12-27 11:44:01
 
 ## 自叙
 
+> 易经是古代的占卜之书，古人遇到一些疑惑不决之事便会用一些办法帮助决断。比如折木棍，后来逐渐演化到用蓍草和龟甲等各种方式。当然，不管什么方式都只是为了做决对，本质上就是心理暗示。逐渐的这种方式被推广，在官方，诸侯和王室的史官们就掌管了卜筮。国家大事，凡是不能决对的，如对外战争，婚丧嫁娶等便由史官先占卜，后进行。他们会对每次的占卜进行整理，记载，当然了，也会夹上一些他们自己的言论，这便事“易”。孔子"韦编三绝"看到的大概就事残留下来的历代史官所记载。根据相关资料最早可能只有王室的史官才懂得占卜之术，这些占卜术不对外公开，只有历代史官所掌握，所以史官得以世袭。
+
 > 周易自然是古代卜筮知识的总结，古人遇到疑事就用卜筮的方式来决断。一生二二生三三生万物就是这个道理，现行的事六十四卦，当然了可以推演出更多的。可惜人才凋零，很难再进化。
 
 > 古人将卦辞和结果不断进行总结因此才有了易经。后世又不断的增加内容，形成了《周易大传》，当然了孔子对内容增加较多。而孔子之后则逐渐变成了解注。
 
-> 阴阳其实是两个状态，两者之间进行转换，这自然是有规律的叫道。
+> 阴阳其实是两个状态，两者之间进行转换，这自然是有规律的叫道。 爻的符号横杠和中间断开的横杠可能是最早的占卜方法，远古之人遇事难决，便找根长条棍子折断，如果折断便是可行，否则便是不可行。最早的占卜自然是相当简单的了，这种方式我们现代人经常也在用，不过我们的方式更多，比如数单双等。当然了，这种只是我的一种猜测。这种机制最后演化为爻的符号。
 
-> 六爻就是其六种变化，如果六爻全变就是转换完成了，古人就是根据其中发生变化的爻辞进行卜筮。
+> 后人对这种二事决于一的方式进行推进演化，便演化出八卦，六十四卦之法。传说伏羲做八卦，文王演六十四卦，当然一次类推这种八卦机制可能演化为任意2的n次方卦。可惜能做这种演化的人才已经凋零，甚至能掌握六十四卦之法的人也是极少的。
+
+> 八卦中的三爻和六十四卦中的六爻就是其三种或者六种变化，如果六爻全变就是转换完成了，古人就是根据其中发生变化的爻辞进行卜筮。这种变化推之可以无穷无尽。所谓伏羲周公，文王，周公
+演化周易这实在是托辞。据我推断，周易可能是上古各代史官不断对占卜资料不断完善，并且加上了史官自己的言论，整理在了一起。至于孔子时代，随着文化伟人的出现，孔子对历代的卜筮之辞进行整理。孔子之所以能够出现在于孔子在于鲁，以及鲁国在两周特殊的地位。孔子能够接触这种周朝的珍贵资料。所以孔子对这些卜筮之辞加以整理形成了易经。
+
+> 周易为孔子所做，但是实在是对历代卜筮之辞的归纳和删减。八卦六十四卦之法也并非伏羲，文王周公所做，实则是无数人的心血。孔子好周礼，因而在各种著作中都对文王周公有所拔高。
+
 
 ## 乾
 
