--- a/_posts/2023-01-01-纪事2023.md
+++ b/_posts/2023-01-01-纪事2023.md
@@ -34,3 +34,7 @@ description: 2023年已经到了，放下过去的包袱，努力前行。
 > 文学基本上都是以描写小人物为主，为小人物发声。并且多接露社会的阴暗面，所以很难被当局接受。
 
 > 有些儿女在外面装模作样，看着像个正派人，但是父母却住在简陋甚至破烂的房子里等死。然后父母去世的时候却假装哀思，大操大办，这样的人在我们现实社会中不是很多吗？
+
+### 2023-02-07 
+
+> 正月十五院校佳节一晃而过，感觉时间过得实在太快了。哎，前途略为迷茫，只有负重前行了。
