--- a/_posts/2023-01-03-TVBoxs.md
+++ b/_posts/2023-01-03-TVBoxs.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: TVBoxRouterArmArmbianOpenwrt
-description: Amlogic设备等电视盒子的研究包括Arm架构的ArmbianOpenwrt等研究
+title: 玩转各种电视盒子
+description: Amlogic设备等电视盒子的研究包括Arm架构的Armbian，Openwrt，Cloreelec等刷机研究
 date: 2023-01-02 15:43:01
 ---
 
