--- a/_posts/2023-01-30-OpenWrt.md
+++ b/_posts/2023-01-30-OpenWrt.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: OpenWrtDockerCloudDrive
+title: Openwrt学习总结
 description: OpenwrtX86的的相关资料遗迹使用x86docker 玩转 DockerCloudDrive
 date: 2023-01-30 20:58:01
 ---
