--- a/_posts/2022-01-01-Essays.md
+++ b/_posts/2022-01-01-Essays.md
@@ -25,6 +25,7 @@ date: 2021-05-01 05:01:01
 - [西安高新软件新城云轨天谷四路到科技路最新详情](#西安高新软件新城云轨天谷四路到科技路最新详情)
 - [忆我的自行车](#忆我的自行车)
 - [接娃记](#接娃记)
+- [关中地区的塬成因简析](#关中地区的塬成因简析)
 - [2022年冬天的第一场雪](#2022年冬天的第一场雪)
 - [李氏戒己书](#李氏戒己书)
 - [李氏戒子书](#李氏戒子书)
@@ -413,6 +414,12 @@ date: 2021-05-01 05:01:01
 > 我等了好长时间，结果没等待我儿子，明明刚才看到他们班的牌子的，怎么突然就找不到人了。这时候老妈打电话：“你接娃呢，娃都回来了，怎么你人还没回来？”。原来这臭小子偷偷的自己跑回家了。
 
 > 看看周围，终于，家长，孩子都慢慢散去了。学校门口又变得空荡荡的，恢复了平静。我也慢慢往家走去。
+
+
+## 关中地区的塬成因简析
+
+> 在关中地区，以渭河为界分为渭南渭北地区。在渭北渭河都形成了诸多的塬。比较知名的如西安的白鹿原（塬），宝鸡的周原（塬）。其中周原更是周人的发源地。我最近在库峪河谷游览的时候终于明白了这些塬是怎么形成的。在库峪河上游河道已经被流水冲刷出了非常深的坑。甚至形成了垂直的切面。当然了，因此我有了种猜测，在很多年（几百万年以前或者更久）以前，关中地区本身就是一块很平的地方。当然了北高南低，最南端是秦岭，可能在某个时期水量比较多，原始慢慢的就形成了大大小小的湖泊。不断的冲刷出来基本跟现代类似的这种地貌。一直道后来的大禹治水时期，大禹对这些河流进行了导流，就形成了大大小小的河流。在渭河周边有些人自古就把渭河称为“禹”河，以关中平原的大小讲大禹治水还是讲得通的，如果一直说到浙江那就完全不可能了，因为在秦汉之后东部才逐渐纳入中原版途。相反自炎黄就发源于陕西中部关中周边，包括大禹父亲的封地“崇”在西安后为周文王所灭，这都是讲得通的。
+
 
 
 ## 2022年冬天的第一场雪
