--- a/_posts/2022-01-01-Essays.md
+++ b/_posts/2022-01-01-Essays.md
@@ -29,6 +29,7 @@ date: 2021-05-01 05:01:01
 - [2022年冬天的第一场雪](#2022年冬天的第一场雪)
 - [李氏戒己书](#李氏戒己书)
 - [李氏戒子书](#李氏戒子书)
+- [登华山记（未完）](#登华山记未完)
 - [芸芸众生](#芸芸众生)
   - [NO0,自序](#no0自序)
   - [NO1,年轻美妇](#no1年轻美妇)
@@ -460,6 +461,8 @@ date: 2021-05-01 05:01:01
 >  行得正坐得端，走路站立需正，写字坐着需端正。与人真诚，不欺骗别人。
 
 >  多读书，儒家十三经，二十五史，资治通鉴需认真研读，吾家已有。
+
+## 登华山记（未完）
 
 ## 芸芸众生
 
