更新西游记42
更新西游记42

--- a/_posts/2022-01-01-Essays.md
+++ b/_posts/2022-01-01-Essays.md
@@ -717,6 +717,8 @@ date: 2021-05-01 05:01:01
 
 > 密码是13位英文，这看似愚蠢的提示，实则包含高深的智慧！
 
+> 阿房宫感觉不像现代专家说的那样，完全未建成的样子，也并非前殿那么大点，本人更信杜牧阿房宫赋里所描写的壮丽，唐人是不可能撒谎，因为阿房宫距离长安也就十来公里，能造得了假？
+
 ## 备注
 
 > 最后修改时间：2023-02-14 09:45
